--- a/Titay.mw
+++ b/Titay.mw
@@ -54,4 +54,4 @@ Unong ed 2010 Census, say papulasyon to et 46,456 totoo. Walay kabaleg tan sukat
 
 {{Zamboanga Sibugay}}
  
-[[Category:Baley ed Zamboanga Sibugay]]
+[[Category:Saray baley na Zamboanga Sibugay]]
