--- a/Tungawan.mw
+++ b/Tungawan.mw
@@ -49,4 +49,4 @@ Unong ed 2010 Census, say papulasyon to et 40,552 totoo. Walay kabaleg tan sukat
 
 {{Zamboanga Sibugay}}
  
-[[Category:Baley ed Zamboanga Sibugay]]
+[[Category:Saray baley na Zamboanga Sibugay]]
