--- a/Daraga.mw
+++ b/Daraga.mw
@@ -76,4 +76,4 @@ Say '''Daraga''' et unaan ya klase baley ed luyag na [[Albay]], [[Pilipinas]]. U
 
 {{Albay}}
 															
-[[Category: Baley ed Albay]]
+[[Category:Saray baley na Albay]]
