--- a/Jovellar.mw
+++ b/Jovellar.mw
@@ -45,4 +45,4 @@ Say '''Jovellar''' et kumapat ya klase baley ed luyag na [[Albay]], [[Pilipinas]
 
 {{Albay}}	
 															
-[[Category: Baley ed Albay]]
+[[Category:Saray baley na Albay]]
