--- a/Libon.mw
+++ b/Libon.mw
@@ -69,4 +69,4 @@ Say '''Libon''' et unaan ya klase baley ed luyag na [[Albay]], [[Pilipinas]]. Un
 
 {{Albay}}	
 															
-[[Category: Baley ed Albay]]
+[[Category:Saray baley na Albay]]
