--- a/Malilipot.mw
+++ b/Malilipot.mw
@@ -40,4 +40,4 @@ Say '''Malilipot''' et kumapat ya klase baley ed luyag na [[Albay]], [[Pilipinas
 
 {{Albay}}
 															
-[[Category: Baley ed Albay]]
+[[Category:Saray baley na Albay]]
