--- a/Malinao,_Albay.mw
+++ b/Malinao,_Albay.mw
@@ -51,4 +51,4 @@ Say '''Malinao''' et kumatlo ya klase baley ed luyag na [[Albay]], [[Pilipinas]]
 
 {{Albay}}
 															
-[[Category: Baley ed Albay]]
+[[Category:Saray baley na Albay]]
