--- a/Manito.mw
+++ b/Manito.mw
@@ -37,4 +37,4 @@ Say '''Manito''' et kumapat ya klase baley ed luyag na [[Albay]], [[Pilipinas]].
 
 {{Albay}}	
 															
-[[Category: Baley ed Albay]]
+[[Category:Saray baley na Albay]]
