--- a/Oas.mw
+++ b/Oas.mw
@@ -76,4 +76,4 @@ Say '''Oas''' et unaan ya klase baley ed luyag na [[Albay]], [[Pilipinas]]. Unon
 
 {{Albay}}
 															
-[[Category: Baley ed Albay]]
+[[Category:Saray baley na Albay]]
