--- a/Pio_Duran.mw
+++ b/Pio_Duran.mw
@@ -56,4 +56,4 @@ Say '''Pio Duran''' et kumatlo ya klase baley ed luyag na [[Albay]], [[Pilipinas
 
 {{Albay}}	
 															
-[[Category: Baley ed Albay]]
+[[Category:Saray baley na Albay]]
