--- a/Polangui.mw
+++ b/Polangui.mw
@@ -65,4 +65,4 @@ Say '''Polangui''' et unaan ya klase baley ed luyag na [[Albay]], [[Pilipinas]].
 
 {{Albay}}
 															
-[[Category: Baley ed Albay]]
+[[Category:Saray baley na Albay]]
