--- a/Santo_Domingo,_Albay.mw
+++ b/Santo_Domingo,_Albay.mw
@@ -46,4 +46,4 @@ Say '''Santo Domingo''' et kumapat ya klase baley ed luyag na [[Albay]], [[Pilip
 
 {{Albay}}
 															
-[[Category: Baley ed Albay]]
+[[Category:Saray baley na Albay]]
