--- a/Tiwi.mw
+++ b/Tiwi.mw
@@ -47,4 +47,4 @@ Say '''Tiwi''' et unaan ya klase baley ed luyag na [[Albay]], [[Pilipinas]]. Uno
 
 {{Albay}}
 															
-[[Category: Baley ed Albay]]
+[[Category:Saray baley na Albay]]
