--- a/Aloran.mw
+++ b/Aloran.mw
@@ -60,4 +60,4 @@ Say '''Aloran''' et kumapat ya klase baley ed luyag na [[Misamis Occidental]], [
 
 {{Misamis Occidental}}
 														
-[[Category: Baley ed Misamis Occidental]]
+[[Category:Saray baley na Misamis Occidental]]
