--- a/Baliangao.mw
+++ b/Baliangao.mw
@@ -37,4 +37,4 @@ Say '''Baliangao''' et kumalima ya klase baley ed luyag na [[Misamis Occidental]
 
 {{Misamis Occidental}}
  												
-[[Category: Baley ed Misamis Occidental]]
+[[Category:Saray baley na Misamis Occidental]]
