--- a/Bonifacio.mw
+++ b/Bonifacio.mw
@@ -50,4 +50,4 @@ Say '''Bonifacio''' et kumapat ya klase baley ed luyag na [[Misamis Occidental]]
 
 {{Misamis Occidental}}
  														
-[[Category: Baley ed Misamis Occidental]]
+[[Category:Saray baley na Misamis Occidental]]
