--- a/Calamba,_Misamis_Occidental.mw
+++ b/Calamba,_Misamis_Occidental.mw
@@ -41,4 +41,4 @@ Say '''Calamba''' et kumapat ya klase baley ed luyag na [[Misamis Occidental]], 
 
 {{Misamis Occidental}}
  													
-[[Category: Baley ed Misamis Occidental]]
+[[Category:Saray baley na Misamis Occidental]]
