--- a/Clarin,_Misamis_Occidental.mw
+++ b/Clarin,_Misamis_Occidental.mw
@@ -51,4 +51,4 @@ Say '''Clarin''' et kumapat ya klase baley ed luyag na [[Misamis Occidental]], [
 
 {{Misamis Occidental}}
  													
-[[Category: Baley ed Misamis Occidental]]
+[[Category:Saray baley na Misamis Occidental]]
