--- a/Concepcion,_Misamis_Occidental.mw
+++ b/Concepcion,_Misamis_Occidental.mw
@@ -40,4 +40,4 @@ Say '''Concepcion''' et kumanem ya klase baley ed luyag na [[Misamis Occidental]
 
 {{Misamis Occidental}}
  														
-[[Category: Baley ed Misamis Occidental]]
+[[Category:Saray baley na Misamis Occidental]]
