--- a/Don_Victoriano_Chiongbian.mw
+++ b/Don_Victoriano_Chiongbian.mw
@@ -33,4 +33,4 @@ Say '''Don Victoriano Chiongbian''' et kumapat ya klase baley ed luyag na [[Misa
 
 {{Misamis Occidental}}
  														
-[[Category: Baley ed Misamis Occidental]]
+[[Category:Saray baley na Misamis Occidental]]
