--- a/Jimenez.mw
+++ b/Jimenez.mw
@@ -47,4 +47,4 @@ Say '''Jimenez''' et kumatlo ya klase baley ed luyag na [[Misamis Occidental]], 
 
 {{Misamis Occidental}}
  													
-[[Category: Baley ed Misamis Occidental]]
+[[Category:Saray baley na Misamis Occidental]]
