--- a/Lopez_Jaena.mw
+++ b/Lopez_Jaena.mw
@@ -50,4 +50,4 @@ Say '''Lopez Jaena''' et kumapat ya klase baley ed luyag na [[Misamis Occidental
 
 {{Misamis Occidental}}
  													
-[[Category: Baley ed Misamis Occidental]]
+[[Category:Saray baley na Misamis Occidental]]
