--- a/Panaon.mw
+++ b/Panaon.mw
@@ -38,4 +38,4 @@ Say '''Panaon''' et kumalima ya klase baley ed luyag na [[Misamis Occidental]], 
 
 {{Misamis Occidental}}
  											
-[[Category: Baley ed Misamis Occidental]]
+[[Category:Saray baley na Misamis Occidental]]
