--- a/Plaridel,_Misamis_Occidental.mw
+++ b/Plaridel,_Misamis_Occidental.mw
@@ -55,4 +55,4 @@ Say '''Plaridel''' et kumatlo ya klase baley ed luyag na [[Misamis Occidental]],
 
 {{Misamis Occidental}}
  												
-[[Category: Baley ed Misamis Occidental]]
+[[Category:Saray baley na Misamis Occidental]]
