--- a/Sapang_Dalaga.mw
+++ b/Sapang_Dalaga.mw
@@ -50,4 +50,4 @@ Say '''Sapang Dalaga''' et kumalima ya klase baley ed luyag na [[Misamis Occiden
 
 {{Misamis Occidental}}
  													
-[[Category: Baley ed Misamis Occidental]]
+[[Category:Saray baley na Misamis Occidental]]
