--- a/Sinacaban.mw
+++ b/Sinacaban.mw
@@ -40,4 +40,4 @@ Say '''Sinacaban''' et kumalima ya klase baley ed luyag na [[Misamis Occidental]
 
 {{Misamis Occidental}}
  													
-[[Category: Baley ed Misamis Occidental]]
+[[Category:Saray baley na Misamis Occidental]]
