--- a/Tudela,_Misamis_Occidental.mw
+++ b/Tudela,_Misamis_Occidental.mw
@@ -54,4 +54,4 @@ Say '''Tudela''' et kumapat ya klase baley ed luyag na [[Misamis Occidental]], [
 
 {{Misamis Occidental}}
  													
-[[Category: Baley ed Misamis Occidental]]
+[[Category:Saray baley na Misamis Occidental]]
