--- a/Alfonso_Castañeda.mw
+++ b/Alfonso_Castañeda.mw
@@ -33,4 +33,4 @@ Say '''Alfonso Castaneda''' et unaan ya klase baley ed luyag na [[Nueva Vizcaya]
 
 {{Nueva Vizcaya}}
  													
-[[Category: Baley ed Nueva Vizcaya]]
+[[Category:Saray baley na Nueva Vizcaya]]
