--- a/Ambaguio.mw
+++ b/Ambaguio.mw
@@ -34,4 +34,4 @@ Say '''Ambaguio''' et kumalima ya klase baley ed luyag na [[Nueva Vizcaya]], [[P
 
 {{Nueva Vizcaya}}
  														
-[[Category: Baley ed Nueva Vizcaya]]
+[[Category:Saray baley na Nueva Vizcaya]]
