--- a/Bagabag.mw
+++ b/Bagabag.mw
@@ -48,4 +48,4 @@ Say '''Bagabag''' et kumadwa ya klase baley ed luyag na [[Nueva Vizcaya]], [[Pil
 
 {{Nueva Vizcaya}}
  													
-[[Category: Baley ed Nueva Vizcaya]]
+[[Category:Saray baley na Nueva Vizcaya]]
