--- a/Bambang.mw
+++ b/Bambang.mw
@@ -42,4 +42,4 @@ Say '''Bambang''' et unaan ya klase baley ed luyag na [[Nueva Vizcaya]], [[Pilip
 
 {{Nueva Vizcaya}}
 															
-[[Category: Baley ed Nueva Vizcaya]]
+[[Category:Saray baley na Nueva Vizcaya]]
