--- a/Bayombong.mw
+++ b/Bayombong.mw
@@ -59,4 +59,4 @@ Say Bayombong walay 25 ya barangay.
 
 {{Nueva Vizcaya}}
  														
-[[Category: Baley ed Nueva Vizcaya]]
+[[Category:Saray baley na Nueva Vizcaya]]
