--- a/Diadi.mw
+++ b/Diadi.mw
@@ -51,4 +51,4 @@ Say '''Diadi''' et kumapat ya klase baley ed luyag na [[Nueva Vizcaya]], [[Pilip
 
 {{Nueva Vizcaya}}
  															
-[[Category: Baley ed Nueva Vizcaya]]
+[[Category:Saray baley na Nueva Vizcaya]]
