--- a/Dupax_del_Norte.mw
+++ b/Dupax_del_Norte.mw
@@ -51,4 +51,4 @@ Say '''Dupax del Norte''' et kumatlo ya klase baley ed luyag na [[Nueva Vizcaya]
 
 {{Nueva Vizcaya}}
  														
-[[Category: Baley ed Nueva Vizcaya]]
+[[Category:Saray baley na Nueva Vizcaya]]
