--- a/Dupax_del_Sur.mw
+++ b/Dupax_del_Sur.mw
@@ -45,4 +45,4 @@ Say '''Dupax del Sur''' et kumadwa ya klase baley ed luyag na [[Nueva Vizcaya]],
 
 {{Nueva Vizcaya}}
  														
-[[Category: Baley ed Nueva Vizcaya]]
+[[Category:Saray baley na Nueva Vizcaya]]
