--- a/Kasibu.mw
+++ b/Kasibu.mw
@@ -56,4 +56,4 @@ Say '''Kasibu''' et kumatlo ya klase baley ed luyag na [[Nueva Vizcaya]], [[Pili
 
 {{Nueva Vizcaya}}
  															
-[[Category: Baley ed Nueva Vizcaya]]
+[[Category:Saray baley na Nueva Vizcaya]]
