--- a/Kayapa.mw
+++ b/Kayapa.mw
@@ -56,4 +56,4 @@ Say '''Kayapa''' et kumatlo ya klase baley ed luyag na [[Nueva Vizcaya]], [[Pili
 
 {{Nueva Vizcaya}}
  															
-[[Category: Baley ed Nueva Vizcaya]]
+[[Category:Saray baley na Nueva Vizcaya]]
