--- a/Quezon,_Nueva_Vizcaya.mw
+++ b/Quezon,_Nueva_Vizcaya.mw
@@ -38,4 +38,4 @@ Say '''Quezon''' et kumapat ya klase baley ed luyag na [[Nueva Vizcaya]], [[Pili
 
 {{Nueva Vizcaya}}
  														
-[[Category: Baley ed Nueva Vizcaya]]
+[[Category:Saray baley na Nueva Vizcaya]]
