--- a/Santa_Fe,_Nueva_Vizcaya.mw
+++ b/Santa_Fe,_Nueva_Vizcaya.mw
@@ -42,4 +42,4 @@ Say '''Santa Fe''' et kumatlo ya klase baley ed luyag na [[Nueva Vizcaya]], [[Pi
 
 {{Nueva Vizcaya}}
  															
-[[Category: Baley ed Nueva Vizcaya]]
+[[Category:Saray baley na Nueva Vizcaya]]
