--- a/Solano.mw
+++ b/Solano.mw
@@ -49,4 +49,4 @@ Say '''Solano''' et unaan ya klase baley ed luyag na [[Nueva Vizcaya]], [[Pilipi
 
 {{Nueva Vizcaya}}
  													
-[[Category: Baley ed Nueva Vizcaya]]
+[[Category:Saray baley na Nueva Vizcaya]]
