--- a/Villaverde.mw
+++ b/Villaverde.mw
@@ -35,4 +35,4 @@ Say '''Villaverde''' et kumalima ya klase baley ed luyag na [[Nueva Vizcaya]], [
 
 {{Nueva Vizcaya}}
  												
-[[Category: Baley ed Nueva Vizcaya]]
+[[Category:Saray baley na Nueva Vizcaya]]
