--- a/Baco,_Oriental_Mindoro.mw
+++ b/Baco,_Oriental_Mindoro.mw
@@ -57,4 +57,4 @@ Say Baco walay 27 ya [[barangay]]:
 
 {{Oriental Mindoro}}
  
-[[Category: Baley ed Oriental Mindoro]]
+[[Category:Saray baley na Oriental Mindoro]]
