--- a/Bansud.mw
+++ b/Bansud.mw
@@ -40,4 +40,4 @@ Say Bansod walay 13 ya [[barangay]]:
 
 {{Oriental Mindoro}}
  
-[[Category: Baley ed Oriental Mindoro]]
+[[Category:Saray baley na Oriental Mindoro]]
