--- a/Bongabong.mw
+++ b/Bongabong.mw
@@ -59,4 +59,4 @@ Say '''Bongabong''' et unaan ya klase baley ed luyag na [[Oriental Mindoro]], [[
 {{Oriental Mindoro}}
  
 															
-[[Category: Baley ed Oriental Mindoro]]
+[[Category:Saray baley na Oriental Mindoro]]
