--- a/Bulalacao.mw
+++ b/Bulalacao.mw
@@ -40,4 +40,4 @@ Say San Pedro walay 15 ya [[barangay]]:
 
 {{Oriental Mindoro}}
  
-[[Category: Baley ed Oriental Mindoro]]
+[[Category:Saray baley na Oriental Mindoro]]
