--- a/Gloria,_Oriental_Mindoro.mw
+++ b/Gloria,_Oriental_Mindoro.mw
@@ -50,4 +50,4 @@ Say '''Gloria''' et kumatlo ya klase baley ed luyag na [[Oriental Mindoro]], [[P
 {{Oriental Mindoro}}
  
 															
-[[Category: Baley ed Oriental Mindoro]]
+[[Category:Saray baley na Oriental Mindoro]]
