--- a/Mansalay.mw
+++ b/Mansalay.mw
@@ -40,4 +40,4 @@ Say '''Mansalay''' et kumadwa ya klase baley ed luyag na [[Oriental Mindoro]], [
 {{Oriental Mindoro}}
  
 															
-[[Category: Baley ed Oriental Mindoro]]
+[[Category:Saray baley na Oriental Mindoro]]
