--- a/Naujan.mw
+++ b/Naujan.mw
@@ -98,4 +98,4 @@ Say Nauhan walay 70 ya [[barangay]]:
 
 {{Oriental Mindoro}}
  
-[[Category: Baley ed Oriental Mindoro]]
+[[Category:Saray baley na Oriental Mindoro]]
