--- a/Pinamalayan,_Oriental_Mindoro.mw
+++ b/Pinamalayan,_Oriental_Mindoro.mw
@@ -60,4 +60,4 @@ Say '''Pinamalayan''' et unaan ya klase baley ed luyag na [[Oriental Mindoro]], 
 {{Oriental Mindoro}}
  
 															
-[[Category: Baley ed Oriental Mindoro]]
+[[Category:Saray baley na Oriental Mindoro]]
