--- a/Pola,_Oriental_Mindoro.mw
+++ b/Pola,_Oriental_Mindoro.mw
@@ -49,4 +49,4 @@ Say Pola walay 23 ya [[barangay]]:
 
 {{Oriental Mindoro}}
  
-[[Category: Baley ed Oriental Mindoro]]
+[[Category:Saray baley na Oriental Mindoro]]
