--- a/Puerto_Galera,_Oriental_Mindoro.mw
+++ b/Puerto_Galera,_Oriental_Mindoro.mw
@@ -63,4 +63,4 @@ File:La Laguna Beach.jpg|La Laguna Beach, 2005
 
 {{Oriental Mindoro}}
  
-[[Category: Baley ed Oriental Mindoro]]
+[[Category:Saray baley na Oriental Mindoro]]
