--- a/Roxas,_Oriental_Mindoro.mw
+++ b/Roxas,_Oriental_Mindoro.mw
@@ -43,4 +43,4 @@ Say '''Roxas''' et kumadwa ya klase baley ed luyag na [[Oriental Mindoro]], [[Pi
 {{Oriental Mindoro}}
  
 															
-[[Category: Baley ed Oriental Mindoro]]
+[[Category:Saray baley na Oriental Mindoro]]
