--- a/San_Teodoro.mw
+++ b/San_Teodoro.mw
@@ -34,4 +34,4 @@ Say '''San Teodoro''' et kumapat ya klase baley ed luyag na [[Oriental Mindoro]]
 
 {{Oriental Mindoro}}
  
-[[Category: Baley ed Oriental Mindoro]]
+[[Category:Saray baley na Oriental Mindoro]]
