--- a/Socorro,_Oriental_Mindoro.mw
+++ b/Socorro,_Oriental_Mindoro.mw
@@ -50,4 +50,4 @@ Say '''Socorro''' et kumatlo ya klase baley ed luyag na [[Oriental Mindoro]], [[
 {{Oriental Mindoro}}
  
 															
-[[Category: Baley ed Oriental Mindoro]]
+[[Category:Saray baley na Oriental Mindoro]]
