--- a/Victoria,_Oriental_Mindoro.mw
+++ b/Victoria,_Oriental_Mindoro.mw
@@ -55,4 +55,4 @@ Say '''Victoria''' et kumadwa ya klase baley ed luyag na [[Oriental Mindoro]], [
 {{Oriental Mindoro}}
  
 															
-[[Category: Baley ed Oriental Mindoro]]
+[[Category:Saray baley na Oriental Mindoro]]
