--- a/Barcelona,_Sorsogon.mw
+++ b/Barcelona,_Sorsogon.mw
@@ -50,4 +50,4 @@ Say '''Barcelona''' et kumalima ya klase baley ed luyag na [[Sorsogon]], [[Pilip
 
 {{Sorsogon}}
  												
-[[Category: Baley ed Sorsogon]]
+[[Category:Saray baley na Sorsogon]]
