--- a/Bulan.mw
+++ b/Bulan.mw
@@ -89,4 +89,4 @@ Say '''Bulan''' et unaan ya klase baley ed luyag na [[Sorsogon]], [[Pilipinas]].
 
 {{Sorsogon}}
  											
-[[Category: Baley ed Sorsogon]]
+[[Category:Saray baley na Sorsogon]]
