--- a/Bulusan.mw
+++ b/Bulusan.mw
@@ -50,4 +50,4 @@ Say '''Bulusan''' et kumapat ya klase baley ed luyag na [[Sorsogon]], [[Pilipina
 {{Sorsogon}}
  
 												
-[[Category: Baley ed Sorsogon]]
+[[Category:Saray baley na Sorsogon]]
