--- a/Casiguran,_Sorsogon.mw
+++ b/Casiguran,_Sorsogon.mw
@@ -51,4 +51,4 @@ Say '''Casiguran''' et kumapat ya klase baley ed luyag na [[Sorsogon]], [[Pilipi
 
 {{Sorsogon}}
  											
-[[Category: Baley ed Sorsogon]]
+[[Category:Saray baley na Sorsogon]]
