--- a/Castilla.mw
+++ b/Castilla.mw
@@ -60,4 +60,4 @@ Say '''Castilla''' et kumatlo ya klase baley ed luyag na [[Sorsogon]], [[Pilipin
 
 {{Sorsogon}}
  									
-[[Category: Baley ed Sorsogon]]
+[[Category:Saray baley na Sorsogon]]
