--- a/Donsol.mw
+++ b/Donsol.mw
@@ -78,4 +78,4 @@ Say '''Donsol''' et kumatlo ya klase baley ed luyag na [[Sorsogon]], [[Pilipinas
 
 {{Sorsogon}}
  									
-[[Category: Baley ed Sorsogon]]
+[[Category:Saray baley na Sorsogon]]
