--- a/Gubat.mw
+++ b/Gubat.mw
@@ -71,4 +71,4 @@ totoo. Walay kabaleg tan sukat to ya 134.51 sq. km. Sikato et walad kumadwa ya d
 
 {{Sorsogon}}
  							
-[[Category: Baley ed Sorsogon]]
+[[Category:Saray baley na Sorsogon]]
