--- a/Irosin.mw
+++ b/Irosin.mw
@@ -55,4 +55,4 @@ totoo. Walay kabaleg tan sukat to ya 149.87 sq. km. Sikato et walad kumadwa ya d
 {{Sorsogon}}
  
 								
-[[Category: Baley ed Sorsogon]]
+[[Category:Saray baley na Sorsogon]]
