--- a/Juban.mw
+++ b/Juban.mw
@@ -51,4 +51,4 @@ Say '''Juban''' et kumapat ya klase baley ed luyag na [[Sorsogon]], [[Pilipinas]
 
 {{Sorsogon}}
  								
-[[Category: Baley ed Sorsogon]]
+[[Category:Saray baley na Sorsogon]]
