--- a/Magallanes,_Sorsogon.mw
+++ b/Magallanes,_Sorsogon.mw
@@ -61,4 +61,4 @@ Say '''Magallanes''' et kumatlo ya klase baley ed luyag na [[Sorsogon]], [[Pilip
 
 {{Sorsogon}}
  					
-[[Category: Baley ed Sorsogon]]
+[[Category:Saray baley na Sorsogon]]
