--- a/Matnog.mw
+++ b/Matnog.mw
@@ -67,4 +67,4 @@ totoo. Walay kabaleg tan sukat to ya 162.4 sq. km. Sikato et walad kumadwa ya di
 {{Sorsogon}}
  
 								
-[[Category: Baley ed Sorsogon]]
+[[Category:Saray baley na Sorsogon]]
