--- a/Prieto_Diaz.mw
+++ b/Prieto_Diaz.mw
@@ -50,4 +50,4 @@ Say '''Prieto Diaz''' et kumalima ya klase baley ed luyag na [[Sorsogon]], [[Pil
 
 {{Sorsogon}}
  								
-[[Category: Baley ed Sorsogon]]
+[[Category:Saray baley na Sorsogon]]
