--- a/Santa_Magdalena.mw
+++ b/Santa_Magdalena.mw
@@ -41,4 +41,4 @@ et 16,848 totoo. Walay kabaleg tan sukat to ya 43.5 sq. km. Sikato et walad kuma
 
 {{Sorsogon}}
  										
-[[Category: Baley ed Sorsogon]]
+[[Category:Saray baley na Sorsogon]]
