--- a/Angono.mw
+++ b/Angono.mw
@@ -33,4 +33,4 @@ Unong ed 2010 Census, say papulasyon to et 102,407 totoo. Walay kabaleg tan suka
 
 {{Rizal}}
  													
-[[Category: Baley ed Rizal]]
+[[Category:Saray baley na Rizal]]
