--- a/Baras,_Rizal.mw
+++ b/Baras,_Rizal.mw
@@ -34,4 +34,4 @@ Unong ed 2010 Census, say papulasyon to et 32,609 totoo. Walay kabaleg tan sukat
 
 {{Rizal}}
  
-[[Category:Baley ed Rizal]]
+[[Category:Saray baley na Rizal]]
