--- a/Binangonan.mw
+++ b/Binangonan.mw
@@ -63,4 +63,4 @@ Say '''Binangonan''' et unaan ya klase baley ed luyag na [[Rizal]], [[Pilipinas]
 
 {{Rizal}}
  														
-[[Category: Baley ed Rizal]]
+[[Category:Saray baley na Rizal]]
