--- a/Cardona.mw
+++ b/Cardona.mw
@@ -44,4 +44,4 @@ Unong ed 2010 Census, say papulasyon to et 47,414 totoo. Walay kabaleg tan sukat
 {{Rizal}}
  
 
-[[Category:Baley ed Rizal]]
+[[Category:Saray baley na Rizal]]
