--- a/Jalajala.mw
+++ b/Jalajala.mw
@@ -30,4 +30,4 @@ Unong ed 2010 Census, say papulasyon to et 30,074 totoo. Walay kabaleg tan sukat
 
 {{Rizal}}
  
-[[Category:Baley ed Rizal]]
+[[Category:Saray baley na Rizal]]
