--- a/Morong,_Rizal.mw
+++ b/Morong,_Rizal.mw
@@ -42,4 +42,4 @@ Unong ed 2010 Census, say papulasyon to et 52,194 totoo. Walay kabaleg tan sukat
 
 {{Rizal}}
  
-[[Category:Baley ed Rizal]]
+[[Category:Saray baley na Rizal]]
