--- a/Pililla.mw
+++ b/Pililla.mw
@@ -34,4 +34,4 @@ Say '''Pililla''' et unaan ya klase baley ed luyag na [[Rizal]], [[Pilipinas]]. 
 
 {{Rizal}}
  													
-[[Category: Baley ed Rizal]]
+[[Category:Saray baley na Rizal]]
