--- a/Tanay.mw
+++ b/Tanay.mw
@@ -33,4 +33,4 @@ Unong ed 2010 Census, say papulasyon to et 98,879 totoo. Walay kabaleg tan sukat
 
 {{Rizal}}
  
-[[Category:Baley ed Rizal]]
+[[Category:Saray baley na Rizal]]
