--- a/Cantilan.mw
+++ b/Cantilan.mw
@@ -41,4 +41,4 @@ Unong ed 2010 Census, say papulasyon to et 30,231 totoo. Walay kabaleg tan sukat
 
 {{Surigao del Sur}}
  
-[[Category:Baley ed Surigao del Sur]]
+[[Category:Saray baley na Surigao del Sur]]
