--- a/Carmen,_Surigao_del_Sur.mw
+++ b/Carmen,_Surigao_del_Sur.mw
@@ -33,4 +33,4 @@ Unong ed 2010 Census, say papulasyon to et 10,287 totoo. Walay kabaleg tan sukat
 {{Surigao del Sur}}
  
   
-[[Category:Baley ed Surigao del Sur]]
+[[Category:Saray baley na Surigao del Sur]]
