--- a/Cortes,_Surigao_del_Sur.mw
+++ b/Cortes,_Surigao_del_Sur.mw
@@ -38,4 +38,4 @@ Unong ed 2010 Census, say papulasyon to et 15,541 totoo. Walay kabaleg tan sukat
 
 {{Surigao del Sur}}
  
-[[Category:Baley ed Surigao del Sur]]
+[[Category:Saray baley na Surigao del Sur]]
