--- a/Hinatuan.mw
+++ b/Hinatuan.mw
@@ -48,4 +48,4 @@ Unong ed 2010 Census, say papulasyon to et 38,731 totoo. Walay kabaleg tan sukat
 
 {{Surigao del Sur}}
  
-[[Category:Baley ed Surigao del Sur]]
+[[Category:Saray baley na Surigao del Sur]]
