--- a/Lianga.mw
+++ b/Lianga.mw
@@ -37,4 +37,4 @@ Unong ed 2010 Census, say papulasyon to et 28,905 totoo. Walay kabaleg tan sukat
 
 {{Surigao del Sur}}
  
-[[Category:Baley ed Surigao del Sur]]
+[[Category:Saray baley na Surigao del Sur]]
