--- a/Lingig.mw
+++ b/Lingig.mw
@@ -43,4 +43,4 @@ Unong ed 2010 Census, say papulasyon to et 31,544 totoo. Walay kabaleg tan sukat
 
 {{Surigao del Sur}}
   
-[[Category:Baley ed Surigao del Sur]]
+[[Category:Saray baley na Surigao del Sur]]
