--- a/Madrid,_Surigao_del_Sur.mw
+++ b/Madrid,_Surigao_del_Sur.mw
@@ -36,4 +36,4 @@ Unong ed 2010 Census, say papulasyon to et 14,888 totoo. Walay kabaleg tan sukat
 
 {{Surigao del Sur}}
  
-[[Category:Baley ed Surigao del Sur]]
+[[Category:Saray baley na Surigao del Sur]]
