--- a/Marihatag.mw
+++ b/Marihatag.mw
@@ -37,4 +37,4 @@ Unong ed 2010 Census, say papulasyon to et 17,926 totoo. Walay kabaleg tan sukat
 
 {{Surigao del Sur}}
  
-[[Category:Baley ed Surigao del Sur]]
+[[Category:Saray baley na Surigao del Sur]]
