--- a/San_Agustin,_Surigao_del_Sur.mw
+++ b/San_Agustin,_Surigao_del_Sur.mw
@@ -37,4 +37,4 @@ Unong ed 2010 Census, say papulasyon to et 20,655 totoo. Walay kabaleg tan sukat
 
 {{Surigao del Sur}}
  
-[[Category:Baley ed Surigao del Sur]]
+[[Category:Saray baley na Surigao del Sur]]
