--- a/San_Miguel,_Surigao_del_Sur.mw
+++ b/San_Miguel,_Surigao_del_Sur.mw
@@ -43,4 +43,4 @@ Say '''San Miguel''' et unaan ya klase baley ed luyag na [[Surigao del Sur]], [[
 
 {{Surigao del Sur}}
  												
-[[Category: Baley ed Surigao del Sur]]
+[[Category:Saray baley na Surigao del Sur]]
