--- a/Tagbina.mw
+++ b/Tagbina.mw
@@ -49,4 +49,4 @@ Unong ed 2010 Census, say papulasyon to et 34,812 totoo. Walay kabaleg tan sukat
 
 {{Surigao del Sur}}
  
-[[Category:Baley ed Surigao del Sur]]
+[[Category:Saray baley na Surigao del Sur]]
