--- a/Tago.mw
+++ b/Tago.mw
@@ -50,4 +50,4 @@ Unong ed 2010 Census, say papulasyon to et 33,993 totoo. Walay kabaleg tan sukat
 {{Surigao del Sur}}
  
 
-[[Category:Baley ed Surigao del Sur]]
+[[Category:Saray baley na Surigao del Sur]]
