--- a/Esperanza,_Agusan_del_Sur.mw
+++ b/Esperanza,_Agusan_del_Sur.mw
@@ -68,4 +68,4 @@ Say '''Esperanza''' et unaan ya klase baley ed luyag na [[Agusan del Sur]], [[Pi
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Agusan del Sur}}													
-[[Category: Baley ed Agusan del Sur]]
+[[Category:Saray baley na Agusan del Sur]]
