--- a/Akbar,_Basilan.mw
+++ b/Akbar,_Basilan.mw
@@ -32,4 +32,4 @@ Say '''Akbar''' et kumanem ya klase baley ed luyag na [[Basilan]], [[Pilipinas]]
 
 {{Basilan}}
 															
-[[Category: Baley ed Basilan]]
+[[Category:Saray baley na Basilan]]
