--- a/Maluso.mw
+++ b/Maluso.mw
@@ -42,4 +42,4 @@ Say '''Maluso''' et kumapat ya klase baley ed luyag na [[Basilan]], [[Pilipinas]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Basilan}}															
-[[Category: Baley ed Basilan]]
+[[Category:Saray baley na Basilan]]
