--- a/San_Andres,_Catanduanes.mw
+++ b/San_Andres,_Catanduanes.mw
@@ -60,4 +60,4 @@ Say '''San Andres''' et kumatlo ya klase baley ed luyag na [[Catanduanes]], [[Pi
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Catanduanes}}													
-[[Category: Baley ed Catanduanes]]
+[[Category:Saray baley na Catanduanes]]
