--- a/Mabini,_Davao_de_Oro.mw
+++ b/Mabini,_Davao_de_Oro.mw
@@ -33,4 +33,4 @@ Say '''Mabini''' et kumadwa ya klase baley ed luyag na [[Compostela Valley]], [[
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Compostela Valley}}														
-[[Category: Baley ed Compostela Valley]]
+[[Category:Saray baley na Compostela Valley]]
