--- a/Mawab.mw
+++ b/Mawab.mw
@@ -33,4 +33,4 @@ Say '''Mawab''' et kumatlo ya klase baley ed luyag na [[Compostela Valley]], [[P
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Compostela Valley}}														
-[[Category: Baley ed Compostela Valley]]
+[[Category:Saray baley na Compostela Valley]]
