--- a/Abra_de_Ilog.mw
+++ b/Abra_de_Ilog.mw
@@ -56,4 +56,4 @@ Say Abra De Ilóg walay 9 ya [[barangay]]:
  
 
 
-[[Category: Baley ed Occidental Mindoro]]
+[[Category:Saray baley na Occidental Mindoro]]
