--- a/Calintaan.mw
+++ b/Calintaan.mw
@@ -31,4 +31,4 @@ Say Calintaan walay 7 ya barangay.
 
 {{Mindoro ed Sagor}}	
 															
-[[Category: Baley ed Occidental Mindoro]]
+[[Category:Saray baley na Occidental Mindoro]]
