--- a/Looc,_Occidental_Mindoro.mw
+++ b/Looc,_Occidental_Mindoro.mw
@@ -33,4 +33,4 @@ Say Looc walay 9 ya barangay.
 
 {{Mindoro ed Sagor}}
 															
-[[Category: Baley ed Occidental Mindoro]]
+[[Category:Saray baley na Occidental Mindoro]]
