--- a/Lubang.mw
+++ b/Lubang.mw
@@ -44,4 +44,4 @@ Say Lubang walay 16 ya barangay.
 
 {{Mindoro ed Sagor}}
 															
-[[Category: Baley ed Occidental Mindoro]]
+[[Category:Saray baley na Occidental Mindoro]]
