--- a/Magsaysay,_Occidental_Mindoro.mw
+++ b/Magsaysay,_Occidental_Mindoro.mw
@@ -36,4 +36,4 @@ Say '''Magsaysay''' et kumatlo ya klase baley ed luyag na [[Occidental Mindoro]]
 {{Occidental Mindoro}}
  
 															
-[[Category: Baley ed Occidental Mindoro]]
+[[Category:Saray baley na Occidental Mindoro]]
