--- a/Mamburao.mw
+++ b/Mamburao.mw
@@ -61,4 +61,4 @@ Say Mamburao walay 15 ya [[barangay]]:
 {{Occidental Mindoro}}
  
 
-[[Category: Baley ed Occidental Mindoro]]
+[[Category:Saray baley na Occidental Mindoro]]
