--- a/Paluan.mw
+++ b/Paluan.mw
@@ -37,4 +37,4 @@ Say '''Paluan''' et kumatlo ya klase baley ed luyag na [[Occidental Mindoro]], [
 {{Occidental Mindoro}}
  
 															
-[[Category: Baley ed Occidental Mindoro]]
+[[Category:Saray baley na Occidental Mindoro]]
