--- a/Rizal,_Occidental_Mindoro.mw
+++ b/Rizal,_Occidental_Mindoro.mw
@@ -35,4 +35,4 @@ Say '''Rizal''' et kumatlo ya klase baley ed luyag na [[Occidental Mindoro]], [[
 {{Occidental Mindoro}}
  	
 															
-[[Category: Baley ed Occidental Mindoro]]
+[[Category:Saray baley na Occidental Mindoro]]
