--- a/Sablayan.mw
+++ b/Sablayan.mw
@@ -46,4 +46,4 @@ Say '''Sablayan''' et unaan ya klase baley ed luyag na [[Occidental Mindoro]], [
 {{Occidental Mindoro}}
  
 															
-[[Category: Baley ed Occidental Mindoro]]
+[[Category:Saray baley na Occidental Mindoro]]
