--- a/San_Jose,_Occidental_Mindoro.mw
+++ b/San_Jose,_Occidental_Mindoro.mw
@@ -61,4 +61,4 @@ Say '''San Jose''' et unaan ya klase baley ed luyag na [[Occidental Mindoro]], [
 {{Occidental Mindoro}}
  	
 															
-[[Category: Baley ed Occidental Mindoro]]
+[[Category:Saray baley na Occidental Mindoro]]
