--- a/Santa_Cruz,_Occidental_Mindoro.mw
+++ b/Santa_Cruz,_Occidental_Mindoro.mw
@@ -34,4 +34,4 @@ Say '''Santa Cruz''' et unaan ya klase baley ed luyag na [[Occidental Mindoro]],
 {{Occidental Mindoro}}
  
 															
-[[Category: Baley ed Occidental Mindoro]]
+[[Category:Saray baley na Occidental Mindoro]]
