--- a/Isulan.mw
+++ b/Isulan.mw
@@ -43,4 +43,4 @@ Unong ed 2010 Census, say papulasyon to et 86,602 totoo. Walay kabaleg tan sukat
 
 {{Sultan Kudarat}}
   
-[[Category:Baley ed Sultan Kudarat]]
+[[Category:Saray baley na Sultan Kudarat]]
