--- a/Kalamansig.mw
+++ b/Kalamansig.mw
@@ -40,4 +40,4 @@ Unong ed 2010 Census, say papulasyon to et 46,408 totoo. Walay kabaleg tan sukat
 
 {{Sultan Kudarat}}
   
-[[Category:Baley ed Sultan Kudarat]]
+[[Category:Saray baley na Sultan Kudarat]]
