--- a/Lambayong.mw
+++ b/Lambayong.mw
@@ -51,4 +51,4 @@ Unong ed 2010 Census, say papulasyon to et 65,557 totoo. Walay kabaleg tan sukat
 {{Sultan Kudarat}}
  
      
-[[Category:Baley ed Sultan Kudarat]]
+[[Category:Saray baley na Sultan Kudarat]]
