--- a/Lebak.mw
+++ b/Lebak.mw
@@ -52,4 +52,4 @@ Unong ed 2010 Census, say papulasyon to et 83,280 totoo. Walay kabaleg tan sukat
 
 {{Sultan Kudarat}}
  
-[[Category:Baley ed Sultan Kudarat]]
+[[Category:Saray baley na Sultan Kudarat]]
