--- a/Lutayan.mw
+++ b/Lutayan.mw
@@ -36,4 +36,4 @@ Unong ed 2010 Census, say papulasyon to et 56,179 totoo. Walay kabaleg tan sukat
 
 {{Sultan Kudarat}}
  
-[[Category:Baley ed Sultan Kudarat]]
+[[Category:Saray baley na Sultan Kudarat]]
