--- a/Palimbang.mw
+++ b/Palimbang.mw
@@ -65,4 +65,4 @@ Unong ed 2010 Census, say papulasyon to et 83,265 totoo. Walay kabaleg tan sukat
 {{Sultan Kudarat}}
  
  
-[[Category:Baley ed Sultan Kudarat]]
+[[Category:Saray baley na Sultan Kudarat]]
