--- a/President_Quirino,_Sultan_Kudarat.mw
+++ b/President_Quirino,_Sultan_Kudarat.mw
@@ -43,4 +43,4 @@ Unong ed 2010 Census, say papulasyon to et 38,753 totoo. Walay kabaleg tan sukat
 
 {{Sultan Kudarat}}
  
-[[Category:Baley ed Sultan Kudarat]]
+[[Category:Saray baley na Sultan Kudarat]]
