--- a/Senator_Ninoy_Aquino,_Sultan_Kudarat.mw
+++ b/Senator_Ninoy_Aquino,_Sultan_Kudarat.mw
@@ -44,4 +44,4 @@ Unong ed 2010 Census, say papulasyon to et 43,508 totoo. Walay kabaleg tan sukat
 
 {{Sultan Kudarat}}
  
-[[Category:Baley ed Sultan Kudarat]]
+[[Category:Saray baley na Sultan Kudarat]]
