--- a/Bongao.mw
+++ b/Bongao.mw
@@ -60,4 +60,4 @@ Unong ed 2010 Census, say papulasyon to et 79,362 totoo. Walay kabaleg tan sukat
 
 {{Tawi-Tawi}}
       
-[[Category:Baley ed Tawi-Tawi]]
+[[Category:Saray baley na Tawi-Tawi]]
