--- a/Languyan.mw
+++ b/Languyan.mw
@@ -44,4 +44,4 @@ Unong ed 2010 Census, say papulasyon to et 42,690 totoo. Walay kabaleg tan sukat
 {{Tawi-Tawi}}
  
    
-[[Category:Baley ed Tawi-Tawi]]
+[[Category:Saray baley na Tawi-Tawi]]
