--- a/Mapun.mw
+++ b/Mapun.mw
@@ -39,4 +39,4 @@ Say '''Mapun''' et kumapat ya klase baley ed luyag na [[Tawi-Tawi]], [[Pilipinas
 
 {{Tawi-Tawi}}
  													
-[[Category: Baley ed Tawi-Tawi]]
+[[Category:Saray baley na Tawi-Tawi]]
