--- a/Panglima_Sugala.mw
+++ b/Panglima_Sugala.mw
@@ -42,4 +42,4 @@ Unong ed 2010 Census, say papulasyon to et 38,704 totoo. Walay kabaleg tan sukat
 
 {{Tawi-Tawi}}
  
-[[Category:Baley ed Tawi-Tawi]]
+[[Category:Saray baley na Tawi-Tawi]]
