--- a/Sapa-Sapa.mw
+++ b/Sapa-Sapa.mw
@@ -49,4 +49,4 @@ Unong ed 2010 Census, say papulasyon to et 28,781 totoo. Walay kabaleg tan sukat
 {{Tawi-Tawi}}
  
       
-[[Category:Baley ed Tawi-Tawi]]
+[[Category:Saray baley na Tawi-Tawi]]
