--- a/Sibutu.mw
+++ b/Sibutu.mw
@@ -41,4 +41,4 @@ Unong ed 2010 Census, say papulasyon to et 28,532 totoo. Walay kabaleg tan sukat
 
 {{Tawi-Tawi}}
  
-[[Category:Baley ed Tawi-Tawi]]
+[[Category:Saray baley na Tawi-Tawi]]
