--- a/Simunul.mw
+++ b/Simunul.mw
@@ -40,4 +40,4 @@ Unong ed 2010 Census, say papulasyon to et 34,538 totoo. Walay kabaleg tan sukat
 
 {{Tawi-Tawi}}
  
-[[Category:Baley ed Tawi-Tawi]]
+[[Category:Saray baley na Tawi-Tawi]]
