--- a/Sitangkai.mw
+++ b/Sitangkai.mw
@@ -34,4 +34,4 @@ Unong ed 2010 Census, say papulasyon to et 30,514 totoo. Walay kabaleg tan sukat
 
 {{Tawi-Tawi}}
  
-[[Category:Baley ed Tawi-Tawi]]
+[[Category:Saray baley na Tawi-Tawi]]
