--- a/South_Ubian.mw
+++ b/South_Ubian.mw
@@ -55,4 +55,4 @@ Unong ed 2010 Census, say papulasyon to et 27,741 totoo. Walay kabaleg tan sukat
 
 {{Tawi-Tawi}}
  
-[[Category:Baley ed Tawi-Tawi]]
+[[Category:Saray baley na Tawi-Tawi]]
