--- a/Tandubas.mw
+++ b/Tandubas.mw
@@ -45,4 +45,4 @@ Unong ed 2010 Census, say papulasyon to et 27,748 totoo. Walay kabaleg tan sukat
 
 {{Tawi-Tawi}}
  
-[[Category:Baley ed Tawi-Tawi]]
+[[Category:Saray baley na Tawi-Tawi]]
