--- a/Turtle_Islands.mw
+++ b/Turtle_Islands.mw
@@ -26,4 +26,4 @@ Unong ed 2010 Census, say papulasyon to et 3,772 totoo. Walay kabaleg tan sukat 
 
 {{Tawi-Tawi}}
  
-[[Category:Baley ed Tawi-Tawi]]
+[[Category:Saray baley na Tawi-Tawi]]
