--- a/Libacao.mw
+++ b/Libacao.mw
@@ -48,4 +48,4 @@ Unong ed 2015 Census, say papulasyon to et 28,241 totoo. Walay kabaleg tan sukat
 {{Aklan}}
 
 
-[[Category:Baley na Aklan]]
+[[Category:Saray baley na Aklan]]
