--- a/Madalag.mw
+++ b/Madalag.mw
@@ -50,4 +50,4 @@ Unong ed 2015 Census, say papulasyon to et 18,389 totoo. Walay kabaleg tan sukat
 
 {{Aklan}}
 
-[[Category:Baley na Aklan]]
+[[Category:Saray baley na Aklan]]
