--- a/Makato.mw
+++ b/Makato.mw
@@ -41,4 +41,4 @@ Unong ed 2015 Census, say papulasyon to et 27,262 totoo. Walay kabaleg tan sukat
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Aklan}}
-[[Category:Baley na Aklan]]
+[[Category:Saray baley na Aklan]]
