--- a/Malay,_Aklan.mw
+++ b/Malay,_Aklan.mw
@@ -41,4 +41,4 @@ Unong ed 2015 Census, say papulasyon to et 52,973 totoo. Walay kabaleg tan sukat
 {{Aklan}}
 
 
-[[Category:Baley na Aklan]]
+[[Category:Saray baley na Aklan]]
