--- a/Nabas.mw
+++ b/Nabas.mw
@@ -43,4 +43,4 @@ Unong ed 2015 Census, say papulasyon to et 36,435 totoo. Walay kabaleg tan sukat
 
 {{Aklan}}
 
-[[Category:Baley na Aklan]]
+[[Category:Saray baley na Aklan]]
