--- a/New_Washington.mw
+++ b/New_Washington.mw
@@ -40,4 +40,4 @@ Unong ed 2015 Census, say papulasyon to et 45,007 totoo. Walay kabaleg tan sukat
 
 {{Aklan}}
 
-[[Category:Baley na Aklan]]
+[[Category:Saray baley na Aklan]]
