--- a/Tangalan.mw
+++ b/Tangalan.mw
@@ -39,4 +39,4 @@ Unong ed 2015 Census, say papulasyon to et 21,916 totoo. Walay kabaleg tan sukat
 
 {{Aklan}}
 
-[[Category:Baley na Aklan]]
+[[Category:Saray baley na Aklan]]
