--- a/Buenavista,_Agusan_del_Norte.mw
+++ b/Buenavista,_Agusan_del_Norte.mw
@@ -48,4 +48,4 @@ Say '''Buenavista''' et unaan ya klase baley ed luyag na [[Agusan del Norte]], [
 
 {{Agusan del Norte}}
 											
-[[Category: Baley ed Agusan del Norte]]
+[[Category:Saray baley na Agusan del Norte]]
