--- a/Las_Nieves.mw
+++ b/Las_Nieves.mw
@@ -41,4 +41,4 @@ Say '''Las Nieves''' et kumadwa ya klase baley ed luyag na [[Agusan del Norte]],
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Agusan del Norte}}														
-[[Category: Baley ed Agusan del Norte]]
+[[Category:Saray baley na Agusan del Norte]]
