--- a/Baganga.mw
+++ b/Baganga.mw
@@ -42,4 +42,4 @@ Say '''Baganga''' et unaan ya klase baley ed luyag na [[Davao Oriental]], [[Pili
 {{Davao Oriental}}
 
 														
-[[Category: Baley ed Davao Oriental]]
+[[Category:Saray baley na Davao Oriental]]
