--- a/Polomolok.mw
+++ b/Polomolok.mw
@@ -47,4 +47,4 @@ Unong ed 2010 Census, say papulasyon to et 138,273 totoo. Walay kabaleg tan suka
 {{South Cotabato}}
  
         
-[[Category:Baley ed South Cotabato]]
+[[Category:Saray baley na South Cotabato]]
