--- a/Santo_Niño,_South_Cotabato.mw
+++ b/Santo_Niño,_South_Cotabato.mw
@@ -35,4 +35,4 @@ Unong ed 2010 Census, say papulasyon to et 39,738 totoo. Walay kabaleg tan sukat
 {{South Cotabato}}
  
   
-[[Category:Baley ed South Cotabato]]
+[[Category:Saray baley na South Cotabato]]
