--- a/T'boli.mw
+++ b/T'boli.mw
@@ -50,4 +50,4 @@ Unong ed 2010 Census, say papulasyon to et 79,175 totoo. Walay kabaleg tan sukat
 
 {{South Cotabato}}
  
-[[Category:Baley ed South Cotabato]]
+[[Category:Saray baley na South Cotabato]]
