--- a/Tupi.mw
+++ b/Tupi.mw
@@ -39,4 +39,4 @@ Unong ed 2010 Census, say papulasyon to et 61,843 totoo. Walay kabaleg tan sukat
 
 {{South Cotabato}}
  
-[[Category:Baley ed South Cotabato]]
+[[Category:Saray baley na South Cotabato]]
