--- a/Dagohoy.mw
+++ b/Dagohoy.mw
@@ -38,4 +38,4 @@ Say '''Dagohoy''' et kumalima ya klase baley ed luyag na [[Bohol]], [[Pilipinas]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Bohol}}															
-[[Category: Baley ed Bohol]]
+[[Category:Saray baley na Bohol]]
