--- a/Mabini,_Bohol.mw
+++ b/Mabini,_Bohol.mw
@@ -49,4 +49,4 @@ Mabini Bohol 2.JPG
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Bohol}}															
-[[Category: Baley ed Bohol]]
+[[Category:Saray baley na Bohol]]
