--- a/President_Carlos_P._Garcia,_Bohol.mw
+++ b/President_Carlos_P._Garcia,_Bohol.mw
@@ -45,4 +45,4 @@ Say '''President Carlos P. Garcia''' et kumapat ya klase baley ed luyag na [[Boh
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Bohol}}															
-[[Category: Baley ed Bohol]]
+[[Category:Saray baley na Bohol]]
