--- a/San_Isidro,_Bohol.mw
+++ b/San_Isidro,_Bohol.mw
@@ -34,4 +34,4 @@ Say '''San Isidro''' et kumalima ya klase baley ed luyag na [[Bohol]], [[Pilipin
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Bohol}}														
-[[Category: Baley ed Bohol]]
+[[Category:Saray baley na Bohol]]
