--- a/San_Miguel,_Bohol.mw
+++ b/San_Miguel,_Bohol.mw
@@ -44,4 +44,4 @@ San Miguel Bohol 2.jpg
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Bohol}}													
-[[Category: Baley ed Bohol]]
+[[Category:Saray baley na Bohol]]
