--- a/Bansalan.mw
+++ b/Bansalan.mw
@@ -48,4 +48,4 @@ Say '''Bansalan''' et unaan ya klase baley ed luyag na [[Davao del Sur]], [[Pili
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Davao del Sur}}														
-[[Category: Baley ed Davao del Sur]]
+[[Category:Saray baley na Davao del Sur]]
