--- a/Almeria.mw
+++ b/Almeria.mw
@@ -37,4 +37,4 @@ Say '''Almeria''' et kumalima ya klase baley ed luyag na [[Biliran]], [[Pilipina
 {{Biliran}}
 
 															
-[[Category: Baley ed Biliran]]
+[[Category:Saray baley na Biliran]]
