--- a/Kawayan.mw
+++ b/Kawayan.mw
@@ -42,4 +42,4 @@ Say '''Kawayan''' et kumalima ya klase baley ed luyag na [[Biliran]], [[Pilipina
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Biliran}}															
-[[Category: Baley ed Biliran]]
+[[Category:Saray baley na Biliran]]
