--- a/Asuncion.mw
+++ b/Asuncion.mw
@@ -43,4 +43,4 @@ Say '''Asuncion''' et unaan ya klase baley ed luyag na [[Davao del Norte]], [[Pi
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Davao del Norte}}															
-[[Category: Baley ed Davao del Norte]]
+[[Category:Saray baley na Davao del Norte]]
