--- a/Cagdianao.mw
+++ b/Cagdianao.mw
@@ -36,4 +36,4 @@ Say '''Cagdianao''' et kumatlo ya klase baley ed luyag na [[Dinagat Islands]], [
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Dinagat Islands}}															
-[[Category: Baley ed Dinagat Islands]]
+[[Category:Saray baley na Dinagat Islands]]
