--- a/Alabel.mw
+++ b/Alabel.mw
@@ -38,4 +38,4 @@ Say '''Alabel''' et unaan ya klase baley ed luyag na [[Sarangani]], [[Pilipinas]
 
 {{Sarangani}}
  														
-[[Category: Baley ed Sarangani]]
+[[Category:Saray baley na Sarangani]]
