--- a/Glan.mw
+++ b/Glan.mw
@@ -55,4 +55,4 @@ Say '''Glan''' et unaan ya klase baley ed luyag na [[Sarangani]], [[Pilipinas]].
 {{Sarangani}}
  
 													
-[[Category: Baley ed Sarangani]]
+[[Category:Saray baley na Sarangani]]
