--- a/Kiamba.mw
+++ b/Kiamba.mw
@@ -43,4 +43,4 @@ Say '''Kiamba''' et unaan ya klase baley ed luyag na [[Sarangani]], [[Pilipinas]
 {{Sarangani}}
  
 														
-[[Category: Baley ed Sarangani]]
+[[Category:Saray baley na Sarangani]]
