--- a/Maasim.mw
+++ b/Maasim.mw
@@ -39,4 +39,4 @@ Say '''Maasim''' et unaan ya klase baley ed luyag na [[Sarangani]], [[Pilipinas]
 
 {{Sarangani}}
  													
-[[Category: Baley ed Sarangani]]
+[[Category:Saray baley na Sarangani]]
