--- a/Maitum.mw
+++ b/Maitum.mw
@@ -43,4 +43,4 @@ Say '''Maitum''' et kumadwa ya klase baley ed luyag na [[Sarangani]], [[Pilipina
 {{Sarangani}}
  
 														
-[[Category: Baley ed Sarangani]]
+[[Category:Saray baley na Sarangani]]
