--- a/Malapatan.mw
+++ b/Malapatan.mw
@@ -36,4 +36,4 @@ Say '''Malapatan''' et unaan ya klase baley ed luyag na [[Sarangani]], [[Pilipin
 {{Sarangani}}
  
 														
-[[Category: Baley ed Sarangani]]
+[[Category:Saray baley na Sarangani]]
