--- a/Malungon.mw
+++ b/Malungon.mw
@@ -55,4 +55,4 @@ Say '''Malungon''' et unaan ya klase baley ed luyag na [[Sarangani]], [[Pilipina
 
 {{Sarangani}}
  												
-[[Category: Baley ed Sarangani]]
+[[Category:Saray baley na Sarangani]]
