--- a/Boac.mw
+++ b/Boac.mw
@@ -83,4 +83,4 @@ Say '''Boac''' et unaan ya klase baley ed luyag na [[Marinduque]], [[Pilipinas]]
 
 {{Marinduque}}
 											
-[[Category: Baley ed Marinduque]]
+[[Category:Saray baley na Marinduque]]
