--- a/Buenavista,_Marinduque.mw
+++ b/Buenavista,_Marinduque.mw
@@ -37,4 +37,4 @@ Say '''Buenavista''' et kumapat ya klase baley ed luyag na [[Marinduque]], [[Pil
 
 {{Marinduque}}
 												
-[[Category: Baley ed Marinduque]]
+[[Category:Saray baley na Marinduque]]
