--- a/Gasan.mw
+++ b/Gasan.mw
@@ -47,4 +47,4 @@ Say '''Gasan''' et kumatlo ya klase baley ed luyag na [[Marinduque]], [[Pilipina
 
 {{Marinduque}}
 												
-[[Category: Baley ed Marinduque]]
+[[Category:Saray baley na Marinduque]]
