--- a/Mogpog.mw
+++ b/Mogpog.mw
@@ -61,4 +61,4 @@ Say '''Mogpog''' et kumatlo ya klase baley ed luyag na [[Marinduque]], [[Pilipin
 
 {{Marinduque}}
 													
-[[Category: Baley ed Marinduque]]
+[[Category:Saray baley na Marinduque]]
