--- a/Santa_Cruz,_Marinduque.mw
+++ b/Santa_Cruz,_Marinduque.mw
@@ -77,4 +77,4 @@ Say '''Santa Cruz''' et unaan ya klase baley ed luyag na [[Marinduque]], [[Pilip
 
 {{Marinduque}}
 												
-[[Category: Baley ed Marinduque]]
+[[Category:Saray baley na Marinduque]]
