--- a/Torrijos.mw
+++ b/Torrijos.mw
@@ -48,4 +48,4 @@ Say '''Torrijos''' et kumatlo ya klase baley ed luyag na [[Marinduque]], [[Pilip
 
 {{Marinduque}}
 												
-[[Category: Baley ed Marinduque]]
+[[Category:Saray baley na Marinduque]]
