--- a/Aglipay.mw
+++ b/Aglipay.mw
@@ -48,4 +48,4 @@ Say '''Aglipay''' et kumatlo ya klase baley ed luyag na [[Quirino]], [[Pilipinas
 
 {{Quirino}}
  													
-[[Category: Baley ed Quirino]]
+[[Category:Saray baley na Quirino]]
