--- a/Cabarroguis.mw
+++ b/Cabarroguis.mw
@@ -39,4 +39,4 @@ Say '''Cabarroguis''' et kumatlo ya klase baley ed luyag na [[Quirino]], [[Pilip
 
 {{Quirino}}
  													
-[[Category: Baley ed Quirino]]
+[[Category:Saray baley na Quirino]]
