--- a/Diffun.mw
+++ b/Diffun.mw
@@ -56,4 +56,4 @@ Say '''Diffun''' et kumadwa ya klase baley ed luyag na [[Quirino]], [[Pilipinas]
 
 {{Quirino}}
  													
-[[Category: Baley ed Quirino]]
+[[Category:Saray baley na Quirino]]
