--- a/Maddela.mw
+++ b/Maddela.mw
@@ -54,4 +54,4 @@ Say '''Maddela''' et unaan ya klase baley ed luyag na [[Quirino]], [[Pilipinas]]
 
 {{Quirino}}
  														
-[[Category: Baley ed Quirino]]
+[[Category:Saray baley na Quirino]]
