--- a/Nagtipunan.mw
+++ b/Nagtipunan.mw
@@ -38,4 +38,4 @@ Say '''Nagtipunan''' et unaan ya klase baley ed luyag na [[Quirino]], [[Pilipina
 
 {{Quirino}}
  														
-[[Category: Baley ed Quirino]]
+[[Category:Saray baley na Quirino]]
