--- a/Saguday.mw
+++ b/Saguday.mw
@@ -32,4 +32,4 @@ Say '''Saguday''' et kumalima ya klase baley ed luyag na [[Quirino]], [[Pilipina
 
 {{Quirino}}
  													
-[[Category: Baley ed Quirino]]
+[[Category:Saray baley na Quirino]]
