--- a/Larena.mw
+++ b/Larena.mw
@@ -45,4 +45,4 @@ Say '''Larena''' et kumalima ya klase baley ed luyag na [[Siquijor]], [[Pilipina
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Siquijor}}												
-[[Category: Baley ed Siquijor]]
+[[Category:Saray baley na Siquijor]]
