--- a/Lazi.mw
+++ b/Lazi.mw
@@ -43,4 +43,4 @@ Say '''Lazi''' et kumapat ya klase baley ed luyag na [[Siquijor]], [[Pilipinas]]
 
 {{Siquijor}}
  												
-[[Category: Baley ed Siquijor]]
+[[Category:Saray baley na Siquijor]]
