--- a/Maria,_Siquijor.mw
+++ b/Maria,_Siquijor.mw
@@ -47,4 +47,4 @@ Say '''Maria''' et kumalima ya klase baley ed luyag na [[Siquijor]], [[Pilipinas
 
 {{Siquijor}}
  												
-[[Category: Baley ed Siquijor]]
+[[Category:Saray baley na Siquijor]]
