--- a/San_Juan,_Siquijor.mw
+++ b/San_Juan,_Siquijor.mw
@@ -40,4 +40,4 @@ Say '''San Juan''' et kumalima ya klase baley ed luyag na [[Siquijor]], [[Pilipi
 
 {{Siquijor}}
  													
-[[Category: Baley ed Siquijor]]
+[[Category:Saray baley na Siquijor]]
