--- a/Siquijor,_Siquijor.mw
+++ b/Siquijor,_Siquijor.mw
@@ -67,4 +67,4 @@ Say '''Siquijor''' et kumapat ya klase baley ed luyag na [[Siquijor]], [[Pilipin
 
 {{Siquijor}}
  											
-[[Category: Baley ed Siquijor]]
+[[Category:Saray baley na Siquijor]]
