--- a/Mahinog.mw
+++ b/Mahinog.mw
@@ -36,4 +36,4 @@ Say '''Mahinog''' et kumalima ya klase baley ed luyag na [[Camiguin]], [[Pilipin
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Camiguin}}														
-[[Category: Baley ed Camiguin]]
+[[Category:Saray baley na Camiguin]]
