--- a/Nueva_Valencia.mw
+++ b/Nueva_Valencia.mw
@@ -45,4 +45,4 @@ Say '''Nueva Valencia''' et kumatlo ya klase baley ed luyag na [[Guimaras]], [[P
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Guimaras}}													
-[[Category: Baley ed Guimaras]]
+[[Category:Saray baley na Guimaras]]
