--- a/Arayat.mw
+++ b/Arayat.mw
@@ -92,3 +92,4 @@ File:Arayatbanojf.JPG|San Juan Baño grotto of God the Father and the Nativity
 {{Pampanga}}
 
 [[Category:Pampanga]]
+ [[Category:Saray baley na Pampanga]]
