--- a/Candaba.mw
+++ b/Candaba.mw
@@ -81,4 +81,5 @@ Say Candaba walay 33 ya [[barangay]]:
 {{philippines-geo-stub}}
 {{Pampanga}}
 
-[[Category:pampanga]]
+[[Category:Pampanga]]
+[[Category:Saray baley na Pampanga]]
