--- a/Floridablanca.mw
+++ b/Floridablanca.mw
@@ -106,4 +106,5 @@ Say Floridablanca walay 33 ya [[barangay]]:
 {{philippines-geo-stub}}
 {{Pampanga}}
 
-[[Category:pampanga]]
+[[Category:Pampanga]]
+ [[Category:Saray baley na Pampanga]]
