--- a/Guagua.mw
+++ b/Guagua.mw
@@ -76,4 +76,5 @@ Say Guagua walay 31 ya [[barangay]]:
 {{philippines-geo-stub}}
 {{Pampanga}}
 
-[[Category:pampanga]]
+[[Category:Pampanga]]
+ [[Category:Saray baley na Pampanga]]
