--- a/Lubao.mw
+++ b/Lubao.mw
@@ -97,4 +97,5 @@ Say Lubao walay 44 ya [[barangay]]:
 {{philippines-geo-stub}}
 {{Pampanga}}
 
-[[Category:pampanga]]
+[[Category:Pampanga]]
+ [[Category:Saray baley na Pampanga]]
