--- a/Mabalacat.mw
+++ b/Mabalacat.mw
@@ -70,4 +70,5 @@ File:Mabalacat 2.JPG
 {{Pampanga}}
 
 [[category:Cities in the Philippines]]
-[[Category:pampanga]]
+[[Category:Pampanga]]
+ [[Category:Saray baley na Pampanga]]
