--- a/Macabebe.mw
+++ b/Macabebe.mw
@@ -73,4 +73,5 @@ Say Macabebe walay 25 ya [[barangay]]:
 {{philippines-geo-stub}}
 {{Pampanga}}
 
-[[Category:pampanga]]
+[[Category:Pampanga]]
+ [[Category:Saray baley na Pampanga]]
