--- a/Magalang.mw
+++ b/Magalang.mw
@@ -73,4 +73,5 @@ Say Magalang walay 27 ya [[barangay]]:
 {{philippines-geo-stub}}
 {{Pampanga}}
 
-[[Category:pampanga]]
+[[Category:Pampanga]]
+ [[Category:Saray baley na Pampanga]]
