--- a/Masantol.mw
+++ b/Masantol.mw
@@ -73,4 +73,5 @@ Say Masantòl walay 26 ya [[barangay]]:
 {{philippines-geo-stub}}
 {{Pampanga}}
 
-[[Category:pampanga]]
+[[Category:Pampanga]]
+ [[Category:Saray baley na Pampanga]]
