--- a/Mexico,_Pampanga.mw
+++ b/Mexico,_Pampanga.mw
@@ -95,4 +95,5 @@ Say México walay 43 ya [[barangay]]:
 {{philippines-geo-stub}}
 {{Pampanga}}
 
-[[Category:pampanga]]
+[[Category:Pampanga]]
+ [[Category:Saray baley na Pampanga]]
