--- a/Minalin.mw
+++ b/Minalin.mw
@@ -58,4 +58,5 @@ Say Minalin walay 15 ya [[barangay]]:
 {{philippines-geo-stub}}
 {{Pampanga}}
 
-[[Category:pampanga]]
+[[Category:Pampanga]]
+ [[Category:Saray baley na Pampanga]]
