--- a/Porac.mw
+++ b/Porac.mw
@@ -78,4 +78,5 @@ Say Porac walay 29 ya [[barangay]]:
 {{philippines-geo-stub}}
 {{Pampanga}}
 
-[[Category:pampanga]]
+[[Category:Pampanga]]
+ [[Category:Saray baley na Pampanga]]
