--- a/San_Luis,_Pampanga.mw
+++ b/San_Luis,_Pampanga.mw
@@ -64,4 +64,5 @@ Say San Luis walay 17 ya [[barangay]]:
 {{philippines-geo-stub}}
 {{Pampanga}}
 
-[[Category:pampanga]]
+[[Category:Pampanga]]
+ [[Category:Saray baley na Pampanga]]
