--- a/San_Simon.mw
+++ b/San_Simon.mw
@@ -65,4 +65,5 @@ Say San Simón walay 14 ya [[barangay]]:
 
 {{Pampanga}}
 
-[[Category:pampanga]]
+[[Category:Pampanga]]
+ [[Category:Saray baley na Pampanga]]
