--- a/Dingras.mw
+++ b/Dingras.mw
@@ -64,4 +64,4 @@ Say Dingras walay 31 ya  [[barangay]].
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 
 {{Ilocos Norte}}
-[[Category:Ilocos Norte]]
+[[Category:Saray baley na Ilocos Norte]]
