--- a/Ferdinand_Marcos.mw
+++ b/Ferdinand_Marcos.mw
@@ -7,5 +7,5 @@ Say kasama ken [[Aimee Marcos|Aimee]] tan [[Bongbong Marcos|Kuya Bongbong]].
 
 {{stub}}
 
-[[category:Ilocos Norte]]
-[[category:Politika|Marcos, Ferdinand]]
+
+[[Category:Politika|Marcos, Ferdinand]]
