--- a/Paoay.mw
+++ b/Paoay.mw
@@ -63,4 +63,4 @@ Say Paoay walay 31 ya [[barangay]].
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 
 {{Ilocos Norte}}
-[[Category:Ilocos Norte]]
+[[Category:Saray baley na Ilocos Norte]]
