--- a/Vintar.mw
+++ b/Vintar.mw
@@ -65,4 +65,4 @@ Say Vintar walay 33 ya [[barangay]].
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 
 {{Ilocos Norte}}
-[[Category:Ilocos Norte]]
+[[Category:Saray baley na Ilocos Norte]]
