--- a/San_Nicolas,_Ilocos_Norte.mw
+++ b/San_Nicolas,_Ilocos_Norte.mw
@@ -55,3 +55,5 @@ Say San Nicolas walay 24 ya [[barangay]].
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 
 {{Ilocos Norte}}
+
+[[Category:Saray baley na Ilocos Norte]]
