/* Saray nipaway ya kawing */ +cat

--- a/Sarrat.mw
+++ b/Sarrat.mw
@@ -55,3 +55,5 @@ Say Sarrat walay 24 ya  [[barangay]].
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 
 {{Ilocos Norte}}
+
+[[Category:Saray baley na Ilocos Norte]]
