--- a/Solsona.mw
+++ b/Solsona.mw
@@ -53,3 +53,5 @@ Say Solsona walay 22 ya [[barangay]].
 * [http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 
 {{Ilocos Norte}}
+
+[[Category:Saray baley na Ilocos Norte]]
