--- a/Barlig.mw
+++ b/Barlig.mw
@@ -35,4 +35,4 @@ Say Barlig walay 11 ya [[barangay]].
 
 {{Luyag na Palandey}}
 
-[[Category:Saray nipaway ya kawing]]
+[[Category:Saray baley na Mountain Province]]
