/* Saray nipaway ya kawing */ +cat

--- a/Bauko.mw
+++ b/Bauko.mw
@@ -51,4 +51,4 @@ Say Bauko walay 22 ya [[barangay]].
 
 {{Luyag na Palandey}}
 
-[[Category:Saray baley na Luyag na Palandey]]
+[[Category:Saray baley na Mountain Province]]
