/* Saray nipaway ya kawing */ +cat

--- a/Besao.mw
+++ b/Besao.mw
@@ -39,4 +39,4 @@ Say Besao walay 14 ya [[barangay]].
 
 {{Luyag na Palandey}}
 
-[[Category:Saray baley na Luyag na Palandey]]
+[[Category:Saray baley na Mountain Province]]
