/* Saray nipaway ya kawing */ +cat

--- a/Bontoc,_Mountain_Province.mw
+++ b/Bontoc,_Mountain_Province.mw
@@ -45,4 +45,4 @@ Say Bontoc walay 16 ya [[barangay]].
 
 {{Luyag na Palandey}}
 
-[[Category:Saray baley na Luyag na Palandey]]
+[[Category:Saray baley na Mountain Province]]
