/* Saray nipaway ya kawing */ +cat

--- a/Natonin.mw
+++ b/Natonin.mw
@@ -36,4 +36,4 @@ Say Natonin walay 11 ya [[barangay]].
 
 {{Luyag na Palandey}}
 
-[[Category:Saray baley na Luyag na Palandey]]
+[[Category:Saray baley na Mountain Province]]
