/* Saray nipaway ya kawing */ +cat

--- a/Paracelis.mw
+++ b/Paracelis.mw
@@ -33,4 +33,4 @@ Say Paracelis walay 9 ya [[barangay]].
 
 {{Luyag na Palandey}}
 
-[[Category:Saray baley na Luyag na Palandey]]
+[[Category:Saray baley na Mountain Province]]
