/* Saray nipaway ya kawing */ +cat

--- a/Sabangan.mw
+++ b/Sabangan.mw
@@ -39,4 +39,4 @@ Say Sabangan walay 15 ya [[barangay]].
 
 {{Luyag na Palandey}}
 
-[[Category:Saray baley na Luyag na Palandey]]
+[[Category:Saray baley na Mountain Province]]
