/* Saray nipaway ya kawing */ +cat

--- a/Sadanga.mw
+++ b/Sadanga.mw
@@ -32,4 +32,4 @@ Say Sadanga walay 8 ya [[barangay]].
 
 {{Luyag na Palandey}}
 
-[[Category:Saray baley na Luyag na Palandey]]
+[[Category:Saray baley na Mountain Province]]
