--- a/Sagada.mw
+++ b/Sagada.mw
@@ -47,4 +47,4 @@ Say Sagada walay 19 ya [[barangay]].
 
 {{Luyag na Palandey}}
 
-[[Category:Saray baley na Luyag na Palandey]]
+[[Category:Saray baley na Mountain Province]]
