/* Saray nipaway ya kawing */ +cat

--- a/Tadian.mw
+++ b/Tadian.mw
@@ -47,4 +47,4 @@ Say Tadian walay 19 ya [[barangay]].
 
 {{Luyag na Palandey}}
 
-[[Category:Saray baley na Luyag na Palandey]]
+[[Category:Saray baley na Mountain Province]]
