--- a/Alaminos.mw
+++ b/Alaminos.mw
@@ -58,4 +58,4 @@ Say Siyudad na Alaminos walay 39 ya [[barangay]].
 
 {{Pangasinan}}
 							
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
