--- a/Bacolod.mw
+++ b/Bacolod.mw
@@ -3,4 +3,4 @@
 Say '''Bacolod''' et unaan ya klase siyudad ed luyag na [[Negros Occidental]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 561,875 totoo. <br> 	
 Walay kabaleg tan sukat to ya 162.67 sq. km. Sikato et walad  alenleneg ya distrito. Say zip code to et 6100. 			
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
