--- a/Balanga.mw
+++ b/Balanga.mw
@@ -3,4 +3,4 @@
 Say '''Balanga''' et kumapat ya klase siyudad ed luyag na [[Bataan]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 96,061 totoo. <br> 	
 Walay kabaleg tan sukat to ya 111.63 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 2100. 			
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
