--- a/Batac.mw
+++ b/Batac.mw
@@ -8,4 +8,4 @@ Walay kabaleg tan sukat to ya 161.06 sq. km. Sikato et walad  kumadwa ya distrit
 
 {{Ilocos Norte}}
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
