--- a/Bogo.mw
+++ b/Bogo.mw
@@ -7,4 +7,4 @@ Walay kabaleg tan sukat to ya 103.52 sq. km. Sikato et walad  kumapat ya distrit
 
 {{Cebu}}
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
