--- a/Cabadbaran.mw
+++ b/Cabadbaran.mw
@@ -3,4 +3,4 @@
 Say '''Cabadbaran''' et kumapat ya klase siyudad ed luyag na [[Agusan del Norte]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 73,639 totoo. <br> 	
 Walay kabaleg tan sukat to ya 214.44 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 8605. 			
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
