--- a/Cabuyao.mw
+++ b/Cabuyao.mw
@@ -3,7 +3,7 @@
 Say '''Cabuyao''' et kumanem ya klase siyudad ed luyag na [[Laguna]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 248,436 totoo. <br> 	
 Walay kabaleg tan sukat to ya 43.40 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 4025. 			
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
 {{translation}}
 
 {{Infobox Philippine city |
