--- a/Cadiz.mw
+++ b/Cadiz.mw
@@ -3,4 +3,4 @@
 Say '''Cadiz, Negros Occidental''' et kumadwa ya klase siyudad ed luyag na [[Negros Occidental]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 154,723  totoo. <br> 	
 Walay kabaleg tan sukat to ya 524.57 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 6121. 			
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
