--- a/Cagayan_de_Oro.mw
+++ b/Cagayan_de_Oro.mw
@@ -3,4 +3,4 @@
 Say '''Cagayan de Oro''' et unaan ya klase siyudad ed luyag na [[Misamis Oriental]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 675,950 totoo. <br> 	
 Walay kabaleg tan sukat to ya 412.80 sq. km. Sikato et walad  unaan ag kumadwa ya distrito. Say zip code to et 9000. 			
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
