--- a/Calamba.mw
+++ b/Calamba.mw
@@ -70,4 +70,4 @@ Say Siyudad na Kalamba walay 54 ya [[barangay]]:
 </td></tr></table>
 
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
