--- a/Candon.mw
+++ b/Candon.mw
@@ -63,4 +63,4 @@ Say Siyudad na Candon walay 42 ya [[barangay]].
 
 {{Ilocos Sur}}
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
