--- a/Carcar.mw
+++ b/Carcar.mw
@@ -5,4 +5,4 @@ Walay kabaleg tan sukat to ya 116.78 sq. km. Sikato et walad  unaan ya distrito.
 
 {{Cebu}}
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
