--- a/Cauayan.mw
+++ b/Cauayan.mw
@@ -8,4 +8,4 @@ Walay kabaleg tan sukat to ya 336.40 sq. km. Sikato et walad  kumatlo ya distrit
 
 {{Isabela}}		
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
