--- a/Danao.mw
+++ b/Danao.mw
@@ -3,4 +3,4 @@
 Say '''Danao''' et kumatlo ya klase siyudad ed luyag na [[Cebu]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 119,252 totoo. <br> 	
 Walay kabaleg tan sukat to ya 107.30 sq. km. Sikato et walad  kumalima ya distrito. Say zip code to et 6004. 			
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
