--- a/Iriga.mw
+++ b/Iriga.mw
@@ -5,4 +5,4 @@ Walay kabaleg tan sukat to ya 137.35 sq. km. Sikato et walad  kumapat ya distrit
 
 {{Camarines ed Abalaten}}
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
