--- a/La_Carlota.mw
+++ b/La_Carlota.mw
@@ -3,4 +3,4 @@
 Say '''La Carlota''' et kumapat ya klase siyudad ed luyag na [[Negros Occidental]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 64,469 totoo. <br> 	
 Walay kabaleg tan sukat to ya 137.29 sq. km. Sikato et walad  kumapat ya distrito. Say zip code to et 6130. 			
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
