--- a/Laoag.mw
+++ b/Laoag.mw
@@ -100,4 +100,4 @@ Say Siyudad na Laoag walay 80 ya [[barangay]].
 
 {{Ilocos Norte}}
 
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
