--- a/Ligao.mw
+++ b/Ligao.mw
@@ -67,4 +67,4 @@ Say Siyudad na Ligao walay 55 ya [[barangay]].
 
 {{Albay}}
 	
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
