--- a/Makati.mw
+++ b/Makati.mw
@@ -200,4 +200,4 @@ Walay kabaleg tan sukat to ya 21.57 sq. km. Sikato et walad  unaan ag kumadwa ya
 |}
 		
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
