--- a/Malolos.mw
+++ b/Malolos.mw
@@ -6,4 +6,4 @@ Walay kabaleg tan sukat to ya 67.25 sq. km. Sikato et walad  unaan ya distrito. 
 
 {{Bulacan}}
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
