--- a/Meycauayan.mw
+++ b/Meycauayan.mw
@@ -5,4 +5,4 @@ Walay kabaleg tan sukat to ya 32.10 sq. km. Sikato et walad  kumapat ya distrito
 
 {{Bulacan}}
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
