--- a/Naga,_Camarines_Sur.mw
+++ b/Naga,_Camarines_Sur.mw
@@ -6,4 +6,4 @@ Walay kabaleg tan sukat to ya 84.48 sq. km. Sikato et walad  kumatlo ya distrito
 
 {{Template:Camarines ed Abalaten}}
 
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
