--- a/Naga,_Cebu.mw
+++ b/Naga,_Cebu.mw
@@ -6,4 +6,4 @@ Walay kabaleg tan sukat to ya 101.97 sq. km. Sikato et walad  unaan ya distrito.
 
 [[File:Naga Cebu.JPG|250px|none]]
 
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
