--- a/Pagadian.mw
+++ b/Pagadian.mw
@@ -76,4 +76,4 @@ Say Siyudad na Pagadian walay 54 ya [[barangay]].
 
 {{Zamboanga del Sur}}
 
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
