--- a/Passi.mw
+++ b/Passi.mw
@@ -8,4 +8,4 @@ Walay kabaleg tan sukat to ya 251.39 sq. km. Sikato et walad  kumapat ya distrit
 
 {{Iloilo}}	
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
