--- a/San_Carlos,_Negros_Occidental.mw
+++ b/San_Carlos,_Negros_Occidental.mw
@@ -5,4 +5,4 @@ Walay kabaleg tan sukat to ya 451.50 sq. km. Sikato et walad  unaan ya distrito.
 
 [[File:San Carlos NegOcc - aerial.JPG|250px|none]]
 
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
