--- a/San_Carlos,_Pangasinan.mw
+++ b/San_Carlos,_Pangasinan.mw
@@ -108,4 +108,4 @@ Say siyudad na San Carlos, Pangasinan et buboeen na 86 ya barangay
 
 {{Pangasinan}}
 						
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
