--- a/San_Fernando,_La_Union.mw
+++ b/San_Fernando,_La_Union.mw
@@ -8,4 +8,4 @@ Walay kabaleg tan sukat to ya 102.72 sq. km. Sikato et walad  unaan ya distrito.
 
 {{La Union}}
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
