--- a/San_Jose,_Nueva_Ecija.mw
+++ b/San_Jose,_Nueva_Ecija.mw
@@ -6,4 +6,4 @@ Walay kabaleg tan sukat to ya 185.99 sq. km. Sikato et walad  kumadwa ya distrit
 
 {{Balon Ecija}}
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
