--- a/Santiago,_Isabela.mw
+++ b/Santiago,_Isabela.mw
@@ -8,4 +8,4 @@ Walay kabaleg tan sukat to ya 255.50 sq. km. Sikato et walad  kumapat ya distrit
 
 {{Isabela}}			
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
