--- a/Siyudad_na_Cavite.mw
+++ b/Siyudad_na_Cavite.mw
@@ -112,4 +112,4 @@ Addaan iti 5 a distrito ti Ciudad ti Cavite, ti Dalahican, Santa Cruz, Caridad, 
 {{Cavite}}
 
 {{stub}}
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
