--- a/Siyudad_na_Cebu.mw
+++ b/Siyudad_na_Cebu.mw
@@ -166,4 +166,4 @@ File:Magellan's Cross full.jpg|Interior of the [[Kruz na Magallanes]]
 
 {{cebu}}
 
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
