--- a/Siyudad_na_Dagupan.mw
+++ b/Siyudad_na_Dagupan.mw
@@ -58,4 +58,4 @@ Say Siyudad na Dagupan walay 31 ya [[barangay]].
 
 {{Pangasinan}}
 
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
