--- a/Siyudad_na_Iloilo.mw
+++ b/Siyudad_na_Iloilo.mw
@@ -8,4 +8,4 @@ Walay kabaleg tan sukat to ya 78.34 sq. km. Sikato et walad  alenleneg ya distri
 
 {{Iloilo}}	
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
