--- a/Siyudad_na_Lapu-Lapu.mw
+++ b/Siyudad_na_Lapu-Lapu.mw
@@ -7,4 +7,4 @@ Walay kabaleg tan sukat to ya 58.10 sq. km. Sikato et walad  alenleneg ya distri
 {{Cebu}}
 
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
