--- a/Siyudad_na_Masbate.mw
+++ b/Siyudad_na_Masbate.mw
@@ -54,4 +54,4 @@ Say Siyudad na Masbate walay 34 ya [[barangay]].
 
 {{Masbate}}
 
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
