--- a/Siyudad_na_Zamboanga.mw
+++ b/Siyudad_na_Zamboanga.mw
@@ -131,4 +131,4 @@ Say Siyudad na Zamboanga walay 98 ya [[barangay]]:
 
 {{Zamboanga del Sur}}
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
