--- a/Tabaco.mw
+++ b/Tabaco.mw
@@ -66,4 +66,4 @@ Say Siyudad na Tabaco walay 47 ya [[barangay]].
 
 {{Albay}}
 
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
