--- a/Taguig.mw
+++ b/Taguig.mw
@@ -38,4 +38,4 @@ Walay kabaleg tan sukat to ya 53.67 sq. km. Sikato et walad  unaan ag kumadwa ya
 </td></tr></table>
 	
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
