--- a/Tuguegarao.mw
+++ b/Tuguegarao.mw
@@ -8,4 +8,4 @@ Walay kabaleg tan sukat to ya 144.80 sq. km. Sikato et walad  kumatlo ya distrit
 
 {{Cagayan}}		
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
