--- a/Urdaneta.mw
+++ b/Urdaneta.mw
@@ -9,4 +9,4 @@ Walay kabaleg tan sukat to ya 100.26 sq. km. Sikato et walad  kumalima ya distri
 
 {{Pangasinan}}		
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
