--- a/Vigan.mw
+++ b/Vigan.mw
@@ -62,4 +62,4 @@ Say Siyudad na Vigan walay 39 ya [[barangay]].
 
 {{Ilocos Sur}}
 
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
