/* Saray too */ +cat

--- a/Antipolo.mw
+++ b/Antipolo.mw
@@ -57,5 +57,5 @@ Say Anti-Polo walay 16 ya [[barangay]]:
 {{philippines-geo-stub}}
 {{rizal}}
 
-[[category:Cities in the Philippines]]
+[[Category:Saray siyudad na Filipinas]]
 [[Category:Rizal (luyag)]]
