--- a/Biñan.mw
+++ b/Biñan.mw
@@ -64,4 +64,4 @@ File:Church of San Isidro Labrador.jpg|Simbaan na Biñán (San Isidro Labrador)
 {{stub}}
 {{Laguna}}
 
-[[Category:Cities in the Philippines]]
+[[Category:Saray siyudad na Filipinas]]
