/* Listaan na barangay */ -cat

--- a/Mabalacat.mw
+++ b/Mabalacat.mw
@@ -69,6 +69,5 @@ File:Mabalacat 2.JPG
 {{philippines-geo-stub}}
 {{Pampanga}}
 
-[[category:Cities in the Philippines]]
 [[Category:Pampanga]]
- [[Category:Saray baley na Pampanga]]
+[[Category:Saray siyudad na Filipinas]]
