/* Listaan na Barangay */ +cat

--- a/San_Jose_del_Monte.mw
+++ b/San_Jose_del_Monte.mw
@@ -95,5 +95,4 @@ Say San José Del Monte walay 59 ya [[barangay]]:
 {{philippines-geo-stub}}
 {{bulakan}}
 
-[[category:Bulakan]]
-[[Category:Cities in the Philippines]]
+[[Category:Saray siyudad na Filipinas]]
