--- a/Agusan_del_Norte.mw
+++ b/Agusan_del_Norte.mw
@@ -5,7 +5,7 @@
 Say '''Agusan del Norte''' (salitan Pangasinan: '''Agusan ed Baybay''') et kumatlo ya klase luyag na [[Caraga]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 332,487 totoo. <br>
 Walay kabaleg tan sukat to ya  3,546.86 kilometro kuwadrado. Say dialling code to et 85. Say kapital to et Cabadbaran.  
         
-[[Category: Saray luyag na Pilipinas]]  
+[[Category:Saray luyag na Filipinas]]  
 
 ==Saray siyudad tan baley==
 
