--- a/Agusan_del_Sur.mw
+++ b/Agusan_del_Sur.mw
@@ -5,7 +5,7 @@
 Say '''Agusan del Sur''' et unaan ya klase luyag na [[Caraga]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 700,653 totoo. <br>
 Walay kabaleg tan sukat to ya  9,989.52 kilometro kuwadrado. Say dialling code to et 85. Say kapital to et Prosperidad.  
         
-[[Category: Saray luyag na Pilipinas]]  
+[[Category:Saray luyag na Filipinas]]  
 
 == Heyografiya ==
 
