--- a/Aklan.mw
+++ b/Aklan.mw
@@ -5,7 +5,7 @@
 Say '''Aklan''' et kumadwa ya klase luyag na [[Western Visayas]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 574,823 totoo. <br>
 Walay kabaleg tan sukat to ya  1,821.42 kilometro kuwadrado. Say dialling code to et 36. Say kapital to et Kalibo.  
         
-[[Category: Saray luyag na Pilipinas]] 
+[[Category:Saray luyag na Filipinas]] 
 
 ==Saray baley==
 
