--- a/Antique.mw
+++ b/Antique.mw
@@ -5,7 +5,7 @@
 Say '''Antique''' et kumadwa ya klase luyag na [[Western Visayas]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 582,012 totoo. <br>
 Walay kabaleg tan sukat to ya  2,729.17 kilometro kuwadrado. Say dialling code to et 36. Say kapital to et San Jose de Buenavista.  
         
-[[Category: Saray luyag na Pilipinas]] 
+[[Category:Saray luyag na Filipinas]] 
 
 ==Saray baley==
 
