--- a/Aurora.mw
+++ b/Aurora.mw
@@ -5,7 +5,7 @@
 Say '''Aurora''' et kumatlo ya klase luyag na [[Central Luzon]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 214,336 totoo. <br>
 Walay kabaleg tan sukat to ya  3,147.32 kilometro kuwadrado. Say dialling code to et 42. Say kapital to et Baler.  
         
-[[Category: Saray luyag na Pilipinas]]   
+[[Category:Saray luyag na Filipinas]]   
 
 ==Saray baley==
 
