--- a/Basilan.mw
+++ b/Basilan.mw
@@ -5,7 +5,7 @@
 Say '''Basilan''' et kumatlo ya klase luyag na [[Autonomous Region in Muslim Mindanao]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 293,322 totoo. <br>
 Walay kabaleg tan sukat to ya  1,379.02 kilometro kuwadrado. Say dialling code to et 62. Say kapital to et Siyudad na Lamitan.  
         
-[[Category: Saray luyag na Pilipinas]]  
+[[Category:Saray luyag na Filipinas]]  
 
 ==Hiyograpiko==
 
