--- a/Benguet.mw
+++ b/Benguet.mw
@@ -39,4 +39,4 @@ Say Benguet walay 13 ya baley.
 
 {{Luzon lateral}}
 
-[[Category: Saray luyag na Pilipinas]]
+[[Category:Saray luyag na Filipinas]]
