--- a/Biliran.mw
+++ b/Biliran.mw
@@ -3,4 +3,4 @@
 Say '''Biliran''' et kumapat ya klase luyag na [[Eastern Visayas]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 161,760 totoo. <br>
 Walay kabaleg tan sukat to ya  536.01 kilometro kuwadrado. Say dialling code to et 53. Say kapital to et Naval.  
         
-[[Category: Saray luyag na Pilipinas]]
+[[Category:Saray luyag na Filipinas]]
