--- a/Bohol.mw
+++ b/Bohol.mw
@@ -5,7 +5,7 @@
 Say '''Bohol''' et unaan ya klase luyag na [[Central Visayas]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 1,313,560 totoo. <br>
 Walay kabaleg tan sukat to ya  4,820.95 kilometro kuwadrado. Say dialling code to et 38. Say kapital to et Tagbilaran.  
         
-[[Category: Saray luyag na Pilipinas]]  
+[[Category:Saray luyag na Filipinas]]  
 
 ==Heyografiya==
 
