--- a/Bukidnon.mw
+++ b/Bukidnon.mw
@@ -3,4 +3,4 @@
 Say '''Bukidnon''' et unaan ya klase luyag na [[Northern Mindanao]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 1,299,192 totoo. <br>
 Walay kabaleg tan sukat to ya  10,498.59 kilometro kuwadrado. Say dialling code to et 88. Say kapital to et Malaybalay.  
         
-[[Category: Saray luyag na Pilipinas]]
+[[Category:Saray luyag na Filipinas]]
