--- a/Bulacan.mw
+++ b/Bulacan.mw
@@ -5,7 +5,7 @@
 Say '''Bulacan''' et unaan ya klase luyag na [[Central Luzon]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 3,292,071 totoo. <br>
 Walay kabaleg tan sukat to ya  2,796.10 kilometro kuwadrado. Say dialling code to et 44. Say kapital to et Malolos.  
         
-[[Category: Saray luyag na Pilipinas]]   
+[[Category:Saray luyag na Filipinas]]   
 
 ==Hiyograpiko==
 
