--- a/Cagayan.mw
+++ b/Cagayan.mw
@@ -5,7 +5,7 @@
 Say '''Cagayan''' et unaan ya klase luyag na [[Cagayan Valley]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 1,199,320 totoo. <br>
 Walay kabaleg tan sukat to ya  9,295.75 kilometro kuwadrado. Say dialling code to et 78. Say kapital to et Tuguegarao.  
         
-[[Category: Saray luyag na Pilipinas]]
+[[Category:Saray luyag na Filipinas]]
 
 ==Saray baley==
 
