--- a/Camarines_Norte.mw
+++ b/Camarines_Norte.mw
@@ -5,7 +5,7 @@
 Say '''Camarines Norte''' ([[salitan Pangasinan]]: '''Camarines ed Baybay''') et kumadwa ya klase luyag na [[Bicol Region]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 583.313 totoo. <br>
 Walay kabaleg tan sukat to ya  2,320.07 kilometro kuwadrado. Say dialling code to et 54. Say kapital to et Daet.  
         
-[[Category: Saray luyag na Pilipinas]]  
+[[Category:Saray luyag na Filipinas]]  
 
 ==Hiyograpiko==
 
