--- a/Camiguin.mw
+++ b/Camiguin.mw
@@ -3,4 +3,4 @@
 Say '''Camiguin''' et kumalima ya klase luyag na [[Northern Mindanao]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 83,807 totoo. <br>
 Walay kabaleg tan sukat to ya  237.95 kilometro kuwadrado. Say dialling code to et 88. Say kapital to et Mambajao.  
         
-[[Category: Saray luyag na Pilipinas]]
+[[Category:Saray luyag na Filipinas]]
