--- a/Capiz.mw
+++ b/Capiz.mw
@@ -5,7 +5,7 @@
 Say '''Capiz''' et unaan ya klase luyag na [[Western Visayas]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 719,685 totoo. <br>
 Walay kabaleg tan sukat to ya  2,594.64 kilometro kuwadrado. Say dialling code to et 36. Say kapital to et Siyudad na Roxas.  
         
-[[Category: Saray luyag na Pilipinas]]   
+[[Category:Saray luyag na Filipinas]]   
 
 ==Saray siyudad san baley==
 
