--- a/Cavite.mw
+++ b/Cavite.mw
@@ -5,7 +5,7 @@
 Say '''Cavite''' et unaan ya klase luyag na [[Calabarzon]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 3,090,691 totoo. <br>
 Walay kabaleg tan sukat to ya  1,574.17 kilometro kuwadrado. Say dialling code to et 46. Say kapital to et Imus.  
         
-[[Category: Saray luyag na Pilipinas]]    
+[[Category:Saray luyag na Filipinas]]    
 
 ==Saray baley==
 <table border="0"><tr>
