--- a/Cotabato.mw
+++ b/Cotabato.mw
@@ -5,4 +5,4 @@
 Say '''Cotabato''' et unaan ya klase luyag na [[Soccsksargen]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 1,226,508 totoo. <br>
 Walay kabaleg tan sukat to ya  9,008.90 kilometro kuwadrado. Say dialling code to et 64. Say kapital to et Kidapawan.  
         
-[[Category: Saray luyag na Pilipinas]]
+[[Category:Saray luyag na Filipinas]]
