--- a/Davao_del_Norte.mw
+++ b/Davao_del_Norte.mw
@@ -9,4 +9,4 @@ Walay kabaleg tan sukat to ya  3,426.97 kilometro kuwadrado. Say dialling code t
 
 {{Filipinas}}
        
-[[Category: Saray luyag na Pilipinas]]
+[[Category:Saray luyag na Filipinas]]
