--- a/Davao_del_Sur.mw
+++ b/Davao_del_Sur.mw
@@ -9,4 +9,4 @@ Walay kabaleg tan sukat to ya  4,607.59 kilometro kuwadrado. Say dialling code t
 {{Filipinas}}
 
         
-[[Category: Saray luyag na Pilipinas]]
+[[Category:Saray luyag na Filipinas]]
