--- a/Davao_Occidental.mw
+++ b/Davao_Occidental.mw
@@ -4,4 +4,4 @@ Say '''Davao Occidental''' et kumadwa ya klase luyag na [[Davao Region]], [[Pili
 Walay kabaleg tan sukat to ya  2,163.45 kilometro kuwadrado. Say dialling code to et 82. Say kapital to et Malita.  
 
         
-[[Category: Saray luyag na Pilipinas]]
+[[Category:Saray luyag na Filipinas]]
