--- a/Davao_Oriental.mw
+++ b/Davao_Oriental.mw
@@ -7,4 +7,4 @@ Walay kabaleg tan sukat to ya  5,679.64 kilometro kuwadrado. Say dialling code t
 
 {{Filipinas}}
         
-[[Category: Saray luyag na Pilipinas]]
+[[Category:Saray luyag na Filipinas]]
