--- a/Dinagat_Islands.mw
+++ b/Dinagat_Islands.mw
@@ -3,7 +3,7 @@
 Say '''Dinagat Islands''' et kumalima ya klase luyag na [[Caraga]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 126,803 totoo. <br>
 Walay kabaleg tan sukat to ya  1,036.34 kilometro kuwadrado. Say dialling code to et 86. Say kapital to et San Jose.  
         
-[[Category: Saray luyag na Pilipinas]]  
+[[Category:Saray luyag na Filipinas]]  
 
 ==Image==
 <gallery><centre>
