--- a/Eastern_Samar.mw
+++ b/Eastern_Samar.mw
@@ -8,4 +8,4 @@ Walay kabaleg tan sukat to ya  4,660.47 kilometro kuwadrado. Say dialling code t
 
 {{Filipinas}}
         
-[[Category: Saray luyag na Pilipinas]]
+[[Category:Saray luyag na Filipinas]]
