--- a/Guimaras.mw
+++ b/Guimaras.mw
@@ -5,7 +5,7 @@
 Say '''Guimaras''' et kumapat ya klase luyag na [[Western Visayas]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 162,943 totoo. <br>
 Walay kabaleg tan sukat to ya  604.57 kilometro kuwadrado. Say dialling code to et 33. Say kapital to et Jordan.  
         
-[[Category: Saray luyag na Pilipinas]] 
+[[Category:Saray luyag na Filipinas]] 
 
 ==Saray baley==
 
