--- a/Ilocos_Norte.mw
+++ b/Ilocos_Norte.mw
@@ -50,4 +50,4 @@ Say Ilocos ed Baybay walay 2 ya siyudad san 21 ya baley
 
 {{Luzon lateral}}
 
-[[Category: Saray luyag na Pilipinas]]
+[[Category:Saray luyag na Filipinas]]
