--- a/Ilocos_Sur.mw
+++ b/Ilocos_Sur.mw
@@ -63,4 +63,4 @@ Say Ilocos ed Abalaten walay 32 ya baley san 2 ya siyudad
 
 {{Luzon lateral}}
 
-[[Category: Saray luyag na Pilipinas]]
+[[Category:Saray luyag na Filipinas]]
