--- a/Iloilo.mw
+++ b/Iloilo.mw
@@ -5,7 +5,7 @@
 Say '''Iloilo''' et unaan ya klase luyag na [[Western Visayas]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 1,805,576 totoo. <br>
 Walay kabaleg tan sukat to ya  5,079.17 kilometro kuwadrado. Say dialling code to et 33. Say kapital to et Siyudad na Iloilo.  
         
-[[Category: Saray luyag na Pilipinas]]  
+[[Category:Saray luyag na Filipinas]]  
 
 ==Heyografiya==
 
