--- a/Isabela.mw
+++ b/Isabela.mw
@@ -5,7 +5,7 @@
 Say '''Isabela''' et unaan ya klase luyag na [[Cagayan Valley]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 1,593,566 totoo. <br>
 Walay kabaleg tan sukat to ya  12,414.93 kilometro kuwadrado. Say dialling code to et 78. Say kapital to et Ilagan.  
         
-[[Category: Saray luyag na Pilipinas]]  
+[[Category:Saray luyag na Filipinas]]  
 
 ==Saray siyudad san baley==
 
