--- a/Kalinga.mw
+++ b/Kalinga.mw
@@ -27,4 +27,4 @@ Say Kalinga walay 8 ya baley.
 
 {{Luzon lateral}}
 
-[[Category: Saray luyag na Pilipinas]]
+[[Category:Saray luyag na Filipinas]]
