--- a/Laguna.mw
+++ b/Laguna.mw
@@ -5,7 +5,7 @@
 Say '''Laguna''' et unaan ya klase luyag na [[Calabarzon]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 2,669,847 totoo. <br>
 Walay kabaleg tan sukat to ya  1,917.85 kilometro kuwadrado. Say dialling code to et 49. Say kapital to et Santa Cruz.  
         
-[[Category: Saray luyag na Pilipinas]] 
+[[Category:Saray luyag na Filipinas]] 
 
 ==Baley==
 <table border="0"><tr>
