--- a/Lanao_del_Norte.mw
+++ b/Lanao_del_Norte.mw
@@ -6,4 +6,4 @@ Walay kabaleg tan sukat to ya  4,159.94 kilometro kuwadrado. Say dialling code t
 
 {{Filipinas}}
         
-[[Category: Saray luyag na Pilipinas]]
+[[Category:Saray luyag na Filipinas]]
