--- a/Leyte.mw
+++ b/Leyte.mw
@@ -6,4 +6,4 @@ Walay kabaleg tan sukat to ya  6,515.05 kilometro kuwadrado. Say dialling code t
 
 {{Visayas lateral}}
         
-[[Category: Saray luyag na Pilipinas]]
+[[Category:Saray luyag na Filipinas]]
